@@ -16,7 +16,6 @@
  */
 package org.apache.solr.core.backup;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
@@ -24,11 +23,13 @@ import java.io.Writer;
 import java.lang.invoke.MethodHandles;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystems;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
 import org.apache.solr.common.SolrException;
@@ -36,7 +37,6 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.ConfigSetService;
@@ -224,9 +224,11 @@ public class BackupManager {
       is.readBytes(arr, 0, (int) is.length());
       // set a default created date, we don't aim at reading actual zookeeper state. The restored
       // collection will have a new creation date when persisted in zookeeper.
-      ClusterState c_state =
-          ClusterState.createFromJson(-1, arr, Collections.emptySet(), Instant.EPOCH, null);
-      return c_state.getCollection(collectionName);
+      @SuppressWarnings("unchecked")
+      Map<String, Object> stateMap = (Map<String, Object>) Utils.fromJSON(arr, 0, arr.length);
+      ClusterState clusterState =
+          ClusterState.createFromCollectionMap(-1, stateMap, Set.of(), Instant.EPOCH, null);
+      return clusterState.getCollection(collectionName);
     }
   }
 
@@ -241,8 +243,7 @@ public class BackupManager {
       throws IOException {
     URI dest = repository.resolve(getZkStateDir(), COLLECTION_PROPS_FILE);
     try (OutputStream collectionStateOs = repository.createOutput(dest)) {
-      collectionStateOs.write(
-          Utils.toJSON(Collections.singletonMap(collectionName, collectionState)));
+      collectionStateOs.write(Utils.toJSON(Map.of(collectionName, collectionState)));
     }
   }
 
@@ -255,16 +256,12 @@ public class BackupManager {
    * @throws IOException in case of I/O errors.
    */
   public void uploadConfigDir(
-      String sourceConfigName,
-      String targetConfigName,
-      ConfigSetService configSetService,
-      boolean requestIsTrusted)
+      String sourceConfigName, String targetConfigName, ConfigSetService configSetService)
       throws IOException {
     URI source = repository.resolveDirectory(getZkStateDir(), CONFIG_STATE_DIR, sourceConfigName);
     if (!repository.exists(source)) {
       throw new IllegalArgumentException("Configset expected at " + source + " does not exist");
     }
-    configSetService.setConfigSetTrust(targetConfigName, requestIsTrusted);
     uploadConfigToSolrCloud(configSetService, source, targetConfigName, "");
   }
 
@@ -303,7 +300,7 @@ public class BackupManager {
         repository.openInput(sourceDir, ZkStateReader.COLLECTION_PROPS_ZKNODE, IOContext.DEFAULT)) {
       byte[] arr = new byte[(int) is.length()];
       is.readBytes(arr, 0, (int) is.length());
-      zkStateReader.getZkClient().create(zkPath, arr, CreateMode.PERSISTENT, true);
+      zkStateReader.getZkClient().create(zkPath, arr, CreateMode.PERSISTENT);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException(
           "Error uploading file to zookeeper path " + source.toString() + " to " + zkPath,
@@ -321,13 +318,13 @@ public class BackupManager {
             + ZkStateReader.COLLECTION_PROPS_ZKNODE;
 
     try {
-      if (!zkStateReader.getZkClient().exists(zkPath, true)) {
+      if (!zkStateReader.getZkClient().exists(zkPath)) {
         // Nothing to back up
         return;
       }
 
       try (OutputStream os = repository.createOutput(dest)) {
-        byte[] data = zkStateReader.getZkClient().getData(zkPath, null, null, true);
+        byte[] data = zkStateReader.getZkClient().getData(zkPath, null, null);
         os.write(data);
       }
     } catch (KeeperException | InterruptedException e) {
@@ -343,11 +340,12 @@ public class BackupManager {
     // getAllConfigFiles always separates file paths with '/'
     for (String filePath : filePaths) {
       // Replace '/' to ensure that propre file is resolved for writing.
-      URI uri = repository.resolve(dir, filePath.replace('/', File.separatorChar));
+      URI uri =
+          repository.resolve(dir, filePath.replace("/", FileSystems.getDefault().getSeparator()));
       // checking for '/' is correct for a directory since ConfigSetService#getAllConfigFiles
       // always separates file paths with '/'
       if (!filePath.endsWith("/")) {
-        if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+        if (ConfigSetService.isFileForbiddenInConfigSets(filePath)) {
           log.warn(
               "Not including zookeeper file in backup, as it is a forbidden type: {}", filePath);
         } else {
@@ -388,7 +386,7 @@ public class BackupManager {
       switch (t) {
         case FILE:
           {
-            if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+            if (ConfigSetService.isFileForbiddenInConfigSets(filePath)) {
               log.warn(
                   "Not including zookeeper file in restore, as it is a forbidden type: {}", file);
             } else {
