@@ -18,7 +18,7 @@ package org.apache.solr.handler.admin;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -59,6 +59,7 @@ import org.apache.lucene.util.RamUsageEstimator;
 import org.apache.lucene.util.SuppressForbidden;
 import org.apache.lucene.util.UnicodeUtil;
 import org.apache.solr.common.MapWriter;
+import org.apache.solr.common.util.SimpleOrderedMap;
 import org.apache.solr.common.util.Utils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -276,15 +277,11 @@ public class IndexSizeEstimator {
   private void convert(Map<String, Object> result) {
     for (Map.Entry<String, Object> entry : result.entrySet()) {
       Object value = entry.getValue();
-      if (value instanceof ItemPriorityQueue) {
-        ItemPriorityQueue queue = (ItemPriorityQueue) value;
-        Map<String, Object> map = new LinkedHashMap<>();
-        queue.toMap(map);
+      if (value instanceof ItemPriorityQueue queue) {
+        Map<String, Object> map = new SimpleOrderedMap<>(queue);
         entry.setValue(map);
-      } else if (value instanceof MapWriterSummaryStatistics) {
-        MapWriterSummaryStatistics stats = (MapWriterSummaryStatistics) value;
-        Map<String, Object> map = new LinkedHashMap<>();
-        stats.toMap(map);
+      } else if (value instanceof MapWriterSummaryStatistics stats) {
+        Map<String, Object> map = new SimpleOrderedMap<>(stats);
         entry.setValue(map);
       } else if (value instanceof AtomicLong) {
         entry.setValue(((AtomicLong) value).longValue());
@@ -308,8 +305,7 @@ public class IndexSizeEstimator {
                     ((Map<String, Object>) perField)
                         .forEach(
                             (k, val) -> {
-                              if (val instanceof SummaryStatistics) {
-                                SummaryStatistics stats = (SummaryStatistics) val;
+                              if (val instanceof SummaryStatistics stats) {
                                 if (k.startsWith("lengths")) {
                                   AtomicLong total =
                                       (AtomicLong)
@@ -596,8 +592,7 @@ public class IndexSizeEstimator {
       LeafReader leafReader = context.reader();
       EstimatingVisitor visitor = new EstimatingVisitor(stats, topN, maxLength, samplingStep);
       Bits liveDocs = leafReader.getLiveDocs();
-      if (leafReader instanceof CodecReader) {
-        CodecReader codecReader = (CodecReader) leafReader;
+      if (leafReader instanceof CodecReader codecReader) {
         StoredFieldsReader storedFieldsReader = codecReader.getFieldsReader();
         // this instance may be faster for a full sequential pass
         StoredFieldsReader mergeInstance = storedFieldsReader.getMergeInstance();
@@ -817,7 +812,7 @@ public class IndexSizeEstimator {
       System.err.println("ERROR: <indexDir> argument is required.");
       System.exit(-2);
     }
-    Directory dir = FSDirectory.open(Paths.get(path));
+    Directory dir = FSDirectory.open(Path.of(path));
     DirectoryReader reader = StandardDirectoryReader.open(dir);
     IndexSizeEstimator stats = new IndexSizeEstimator(reader, topN, maxLen, summary, details);
     System.out.println(Utils.toJSONString(stats.estimate()));
