@@ -74,14 +74,15 @@ import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.SolrCore;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.ResultContext;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.response.transform.DocTransformer;
 import org.apache.solr.schema.FieldType;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.search.DocIterationInfo;
 import org.apache.solr.search.DocList;
 import org.apache.solr.search.DocValuesIteratorCache;
 import org.apache.solr.search.QueryUtils;
@@ -217,7 +218,7 @@ public class RealTimeGetComponent extends SearchComponent {
     }
 
     final SolrCore core = req.getCore();
-    SchemaField idField = core.getLatestSchema().getUniqueKeyField();
+    SchemaField idField = req.getSchema().getUniqueKeyField();
     FieldType fieldType = idField.getType();
 
     SolrDocumentList docList = new SolrDocumentList();
@@ -274,12 +275,10 @@ public class RealTimeGetComponent extends SearchComponent {
 
                 SolrDocument doc;
                 if (oper == UpdateLog.ADD) {
-                  doc =
-                      toSolrDoc(
-                          (SolrInputDocument) entry.get(entry.size() - 1), core.getLatestSchema());
+                  doc = toSolrDoc((SolrInputDocument) entry.get(entry.size() - 1), req.getSchema());
                   // toSolrDoc filtered copy-field targets already
                   if (transformer != null) {
-                    transformer.transform(doc, -1); // unknown docID
+                    transformer.transform(doc, -1, DocIterationInfo.NONE); // unknown docID
                   }
                 } else if (oper == UpdateLog.UPDATE_INPLACE) {
                   assert entry.size() == 5;
@@ -330,7 +329,7 @@ public class RealTimeGetComponent extends SearchComponent {
           if (rb.getFilters() != null) {
             for (Query raw : rb.getFilters()) {
               raw = makeQueryable(raw);
-              Query q = raw.rewrite(searcherInfo.getSearcher().getIndexReader());
+              Query q = raw.rewrite(searcherInfo.getSearcher());
               Scorer scorer =
                   searcherInfo
                       .getSearcher()
@@ -350,7 +349,7 @@ public class RealTimeGetComponent extends SearchComponent {
         SolrDocumentFetcher docFetcher = searcherInfo.getSearcher().getDocFetcher();
         Document luceneDocument =
             docFetcher.doc(docid, rsp.getReturnFields().getLuceneFieldNames());
-        SolrDocument doc = toSolrDoc(luceneDocument, core.getLatestSchema());
+        SolrDocument doc = toSolrDoc(luceneDocument, searcherInfo.getSearcher().getSchema());
         if (reuseDvIters == null) {
           reuseDvIters = new DocValuesIteratorCache(searcherInfo.getSearcher());
         }
@@ -364,7 +363,7 @@ public class RealTimeGetComponent extends SearchComponent {
             transformer.setContext(
                 resultContext); // we avoid calling setContext unless searcher is new/changed
           }
-          transformer.transform(doc, docid);
+          transformer.transform(doc, docid, DocIterationInfo.NONE);
         }
         docList.add(doc);
       } // loop on ids
@@ -511,7 +510,7 @@ public class RealTimeGetComponent extends SearchComponent {
           toSolrDoc(partialDoc, schema, forInPlaceUpdate); // filters copy-field targets TODO don't
       DocTransformer transformer = returnFields.getTransformer();
       if (transformer != null && !transformer.needsSolrIndexSearcher()) {
-        transformer.transform(solrDoc, -1); // no docId when from the ulog
+        transformer.transform(solrDoc, -1, DocIterationInfo.NONE); // no docId when from the ulog
       } // if needs searcher, it must be [child]; tlog docs already have children
       return solrDoc;
     }
@@ -561,7 +560,7 @@ public class RealTimeGetComponent extends SearchComponent {
     try {
       // now fetch last document from index, and merge partialDoc on top of it
       SolrIndexSearcher searcher = searcherHolder.get();
-      SchemaField idField = core.getLatestSchema().getUniqueKeyField();
+      SchemaField idField = searcher.getSchema().getUniqueKeyField();
       Term idTerm = new Term(idField.getName(), idBytes);
 
       int docid = searcher.getFirstMatch(idTerm);
@@ -583,10 +582,7 @@ public class RealTimeGetComponent extends SearchComponent {
         searcher
             .getDocFetcher()
             .decorateDocValueFields(
-                doc,
-                docid,
-                Collections.singleton(VERSION_FIELD),
-                new DocValuesIteratorCache(searcher, false));
+                doc, docid, Set.of(VERSION_FIELD), new DocValuesIteratorCache(searcher, false));
       }
 
       long docVersion = (long) doc.getFirstValue(VERSION_FIELD);
@@ -622,7 +618,7 @@ public class RealTimeGetComponent extends SearchComponent {
     if (transformer != null) {
       transformer.setContext(
           new RTGResultContext(returnFields, searcher, null)); // we get away with null req
-      transformer.transform(solrDoc, docId);
+      transformer.transform(solrDoc, docId, DocIterationInfo.NONE);
     }
     return solrDoc;
   }
@@ -786,12 +782,12 @@ public class RealTimeGetComponent extends SearchComponent {
         int docId =
             searcher.getFirstMatch(
                 new Term(
-                    core.getLatestSchema().getUniqueKeyField().getName(),
+                    searcher.getSchema().getUniqueKeyField().getName(),
                     resolveStrategy == Resolution.ROOT_WITH_CHILDREN ? rootIdBytes : idBytes));
         if (docId < 0) return null;
 
         if (resolveStrategy == Resolution.ROOT_WITH_CHILDREN
-            && core.getLatestSchema().isUsableForChildDocs()) {
+            && searcher.getSchema().isUsableForChildDocs()) {
           // check that this doc is in fact a root document as a prevention measure
           if (!hasRootTerm(searcher, rootIdBytes)) {
             throw new SolrException(
@@ -802,7 +798,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
         SolrDocument solrDoc =
             fetchSolrDoc(searcher, docId, makeReturnFields(core, onlyTheseFields, resolveStrategy));
-        sid = toSolrInputDocument(solrDoc, core.getLatestSchema()); // filters copy-field targets
+        sid = toSolrInputDocument(solrDoc, searcher.getSchema()); // filters copy-field targets
         // the assertions above furthermore guarantee the result corresponds to idBytes
       } finally {
         searcherHolder.decref();
@@ -858,7 +854,7 @@ public class RealTimeGetComponent extends SearchComponent {
     if (resolution == Resolution.ROOT_WITH_CHILDREN
         && core.getLatestSchema().isUsableForChildDocs()) {
       SolrParams params = new ModifiableSolrParams().set("limit", "-1");
-      try (LocalSolrQueryRequest req = new LocalSolrQueryRequest(core, params)) {
+      try (SolrQueryRequestBase req = new SolrQueryRequestBase(core, params)) {
         docTransformer = core.getTransformerFactory("child").create(null, params, req);
       }
     } else {
@@ -879,8 +875,7 @@ public class RealTimeGetComponent extends SearchComponent {
         if ((!sf.hasDocValues() && !sf.stored()) || schema.isCopyFieldTarget(sf)) continue;
       }
       for (Object val : doc.getFieldValues(fname)) {
-        if (val instanceof IndexableField) {
-          IndexableField f = (IndexableField) val;
+        if (val instanceof IndexableField f) {
           // materialize:
           if (sf != null) {
             val = sf.getType().toObject(f); // object or external string?
@@ -1030,8 +1025,8 @@ public class RealTimeGetComponent extends SearchComponent {
 
   @Override
   public int distributedProcess(ResponseBuilder rb) throws IOException {
-    if (rb.stage < ResponseBuilder.STAGE_GET_FIELDS) return ResponseBuilder.STAGE_GET_FIELDS;
-    if (rb.stage == ResponseBuilder.STAGE_GET_FIELDS) {
+    if (rb.getStage() < ResponseBuilder.STAGE_GET_FIELDS) return ResponseBuilder.STAGE_GET_FIELDS;
+    if (rb.getStage() == ResponseBuilder.STAGE_GET_FIELDS) {
       return createSubRequests(rb);
     }
     return ResponseBuilder.STAGE_DONE;
@@ -1143,7 +1138,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
   @Override
   public void finishStage(ResponseBuilder rb) {
-    if (rb.stage != ResponseBuilder.STAGE_GET_FIELDS) {
+    if (rb.getStage() != ResponseBuilder.STAGE_GET_FIELDS) {
       return;
     }
 
@@ -1374,7 +1369,7 @@ public class RealTimeGetComponent extends SearchComponent {
 
   private List<Long> resolveVersionRanges(String versionsStr, UpdateLog ulog) {
     if (StrUtils.isNullOrEmpty(versionsStr)) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<String> ranges = StrUtils.splitSmart(versionsStr, ",", true);
@@ -1457,7 +1452,7 @@ public class RealTimeGetComponent extends SearchComponent {
       final String ids[] = params.getParams("ids");
 
       if (id == null && ids == null) {
-        IdsRequested result = new IdsRequested(Collections.<String>emptyList(), true);
+        IdsRequested result = new IdsRequested(List.of(), true);
         req.getContext().put(contextKey, result);
         return result;
       }
