@@ -17,8 +17,6 @@
 
 package org.apache.solr.packagemanager;
 
-import static org.apache.solr.cli.SolrCLI.printGreen;
-import static org.apache.solr.cli.SolrCLI.printRed;
 import static org.apache.solr.packagemanager.PackageUtils.getMapper;
 
 import com.jayway.jsonpath.InvalidPathException;
@@ -30,17 +28,19 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Scanner;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import org.apache.solr.cli.CLIUtils;
 import org.apache.solr.cli.SolrCLI;
+import org.apache.solr.cli.ToolRuntime;
 import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
@@ -74,6 +74,7 @@ import org.slf4j.LoggerFactory;
 /** Handles most of the management of packages that are already installed in Solr. */
 public class PackageManager implements Closeable {
 
+  final ToolRuntime runtime;
   final String solrUrl;
   final SolrClient solrClient;
   final SolrZkClient zkClient;
@@ -82,7 +83,8 @@ public class PackageManager implements Closeable {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  public PackageManager(SolrClient solrClient, String solrUrl, String zkHost) {
+  public PackageManager(ToolRuntime runtime, SolrClient solrClient, String solrUrl, String zkHost) {
+    this.runtime = runtime;
     this.solrUrl = solrUrl;
     this.solrClient = solrClient;
     this.zkClient =
@@ -104,26 +106,26 @@ public class PackageManager implements Closeable {
       throws IOException, SolrServerException {
     SolrPackageInstance packageInstance = getPackageInstance(packageName, version);
     if (packageInstance == null) {
-      printRed(
+      runtime.printError(
           "Package "
               + packageName
               + ":"
               + version
               + " doesn't exist. Use the install command to install this package version first.");
-      System.exit(1);
+      runtime.exit(1);
     }
 
     // Make sure that this package instance is not deployed on any collection
     Map<String, String> collectionsDeployedOn = getDeployedCollections(packageName);
     for (String collection : collectionsDeployedOn.keySet()) {
       if (version.equals(collectionsDeployedOn.get(collection))) {
-        printRed(
+        runtime.printError(
             "Package "
                 + packageName
                 + " is currently deployed on collection: "
                 + collection
                 + ". Undeploy the package with undeploy <package-name> --collections <collection1>[,<collection2>,...] before attempting to uninstall the package.");
-        System.exit(1);
+        runtime.exit(1);
       }
     }
 
@@ -134,19 +136,19 @@ public class PackageManager implements Closeable {
       SolrPackageInstance clusterPackageInstance = clusterPackages.get(clusterPackageName);
       if (packageName.equals(clusterPackageName)
           && version.equals(clusterPackageInstance.version)) {
-        printRed(
+        runtime.printError(
             "Package "
                 + packageName
                 + "is currently deployed as a cluster-level plugin ("
                 + clusterPackageInstance.getCustomData()
                 + "). Undeploy the package with undeploy <package-name> --collections <collection1>[,<collection2>,...] before uninstalling the package.");
-        System.exit(1);
+        runtime.exit(1);
       }
     }
 
     // Delete the package by calling the Package API and remove the Jar
 
-    printGreen("Executing Package API to remove this package...");
+    runtime.printSuccess("Executing Package API to remove this package...");
     PackagePayload.DelVersion del = new PackagePayload.DelVersion();
     del.version = version;
     del.pkg = packageName;
@@ -155,29 +157,30 @@ public class PackageManager implements Closeable {
         new V2Request.Builder(PackageUtils.PACKAGE_PATH)
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", del))
+            .withPayload(Map.of("delete", del))
             .build();
 
     try {
       V2Response resp = req.process(solrClient);
-      printGreen("Response: " + resp.jsonStr());
+      runtime.printSuccess("Response: " + resp.jsonStr());
     } catch (SolrServerException | IOException e) {
       throw new SolrException(ErrorCode.BAD_REQUEST, e);
     }
 
-    printGreen("Executing Package Store API to remove the " + packageName + " package...");
+    runtime.printSuccess(
+        "Executing Package Store API to remove the " + packageName + " package...");
 
     List<String> filesToDelete = new ArrayList<>(packageInstance.files);
     filesToDelete.add(
         String.format(Locale.ROOT, "/package/%s/%s/%s", packageName, version, "manifest.json"));
     for (String filePath : filesToDelete) {
       DistribFileStore.deleteZKFileEntry(zkClient, filePath);
-      String path = "/api/cluster/files" + filePath;
-      printGreen("Deleting " + path);
+      String path = "/api/cluster/filestore/files" + filePath;
+      runtime.printSuccess("Deleting " + path);
       solrClient.request(new GenericSolrRequest(SolrRequest.METHOD.DELETE, path));
     }
 
-    printGreen("Package uninstalled: " + packageName + ":" + version + ":-)");
+    runtime.printSuccess("Package uninstalled: " + packageName + ":" + version + ":-)");
   }
 
   public List<SolrPackageInstance> fetchInstalledPackageInstances() throws SolrException {
@@ -185,14 +188,14 @@ public class PackageManager implements Closeable {
     List<SolrPackageInstance> ret = new ArrayList<>();
     packages = new HashMap<>();
     try {
-      if (zkClient.exists(ZkStateReader.SOLR_PKGS_PATH, true)) {
+      if (zkClient.exists(ZkStateReader.SOLR_PKGS_PATH)) {
         @SuppressWarnings("unchecked")
         Map<String, List<Map<?, ?>>> packagesZnodeMap =
             (Map<String, List<Map<?, ?>>>)
                 getMapper()
                     .readValue(
                         new String(
-                            zkClient.getData(ZkStateReader.SOLR_PKGS_PATH, null, null, true),
+                            zkClient.getData(ZkStateReader.SOLR_PKGS_PATH, null, null),
                             StandardCharsets.UTF_8),
                         Map.class)
                     .get("packages");
@@ -245,14 +248,14 @@ public class PackageManager implements Closeable {
                       false) /* Making a collection request, but already baked into path */);
       packages =
           (Map<String, String>)
-              result._get("/response/params/PKG_VERSIONS", Collections.emptyMap());
+              Objects.requireNonNullElse(result._get("/response/params/PKG_VERSIONS"), Map.of());
     } catch (PathNotFoundException ex) {
       // Don't worry if PKG_VERSION wasn't found. It just means this collection was never touched by
       // the package manager.
     } catch (SolrServerException | IOException ex) {
       throw new SolrException(ErrorCode.SERVER_ERROR, ex);
     }
-    if (packages == null) return Collections.emptyMap();
+    if (packages == null) return Map.of();
     Map<String, SolrPackageInstance> ret = new HashMap<>();
     for (String packageName : packages.keySet()) {
       if (!StrUtils.isNullOrEmpty(packageName)
@@ -275,25 +278,24 @@ public class PackageManager implements Closeable {
     Map<String, String> packageVersions = new HashMap<>();
     // map of package name to multiple values of pluginMeta(Map<String, String>)
     Map<String, Set<PluginMeta>> packagePlugins = new HashMap<>();
-    Map<String, Object> result;
+    Object pluginsValue;
     try {
       NamedList<Object> response =
           solrClient.request(
               new GenericV2SolrRequest(SolrRequest.METHOD.GET, PackageUtils.CLUSTERPROPS_PATH));
-      Integer statusCode = (Integer) response.findRecursive("responseHeader", "status");
+      Integer statusCode = (Integer) response._get(List.of("responseHeader", "status"), null);
       if (statusCode == null || statusCode == ErrorCode.NOT_FOUND.code) {
         // Cluster props doesn't exist, that means there are no cluster level plugins installed.
-        result = Collections.emptyMap();
+        pluginsValue = null;
       } else {
-        result = response.asShallowMap();
+        pluginsValue = response.get(ContainerPluginsApi.PLUGIN);
       }
     } catch (SolrServerException | IOException ex) {
       throw new SolrException(ErrorCode.SERVER_ERROR, ex);
     }
     @SuppressWarnings({"unchecked"})
     Map<String, Object> clusterPlugins =
-        (Map<String, Object>)
-            result.getOrDefault(ContainerPluginsApi.PLUGIN, Collections.emptyMap());
+        pluginsValue != null ? (Map<String, Object>) pluginsValue : Map.of();
     for (Map.Entry<String, Object> entry : clusterPlugins.entrySet()) {
       PluginMeta pluginMeta;
       try {
@@ -327,7 +329,7 @@ public class PackageManager implements Closeable {
 
   private void ensureCollectionsExist(List<String> collections) {
     try {
-      List<String> existingCollections = zkClient.getChildren("/collections", null, true);
+      List<String> existingCollections = zkClient.getChildren("/collections", null);
       Set<String> nonExistent = new HashSet<>(collections);
       nonExistent.removeAll(existingCollections);
       if (!nonExistent.isEmpty()) {
@@ -366,7 +368,7 @@ public class PackageManager implements Closeable {
     boolean verifySuccess =
         verify(packageInstance, deployedCollections, shouldDeployClusterPlugins, overrides);
     if (verifySuccess) {
-      printGreen(
+      runtime.printSuccess(
           "Deployed on "
               + deployedCollections
               + " and verified package: "
@@ -395,13 +397,13 @@ public class PackageManager implements Closeable {
           getPackagesDeployed(collection).get(packageInstance.name);
       if (packageInstance.equals(deployedPackage)) {
         if (!pegToLatest) {
-          printRed("Package " + packageInstance + " already deployed on " + collection);
+          runtime.printError("Package " + packageInstance + " already deployed on " + collection);
           previouslyDeployed.add(collection);
           continue;
         }
       } else {
         if (deployedPackage != null && !isUpdate) {
-          printRed(
+          runtime.printError(
               "Package "
                   + deployedPackage
                   + " already deployed on "
@@ -419,27 +421,24 @@ public class PackageManager implements Closeable {
 
       // Get package params
       try {
-        boolean packageParamsExist =
-            solrClient
-                .request(
-                    new GenericV2SolrRequest(
-                            SolrRequest.METHOD.GET,
-                            PackageUtils.getCollectionParamsPath(collection) + "/packages")
-                        .setRequiresCollection(
-                            false) /* Making a collection-request, but already baked into path */)
-                .asShallowMap()
-                .containsKey("params");
+        NamedList<Object> collectionParams =
+            solrClient.request(
+                new GenericV2SolrRequest(
+                        SolrRequest.METHOD.GET,
+                        PackageUtils.getCollectionParamsPath(collection) + "/packages")
+                    .setRequiresCollection(
+                        false) /* Making a collection-request, but already baked into path */);
+        boolean packageParamsExist = collectionParams.get("params") != null;
         SolrCLI.postJsonToSolr(
             solrClient,
             PackageUtils.getCollectionParamsPath(collection),
             getMapper()
                 .writeValueAsString(
-                    Collections.singletonMap(
+                    Map.of(
                         packageParamsExist ? "update" : "set",
-                        Collections.singletonMap(
+                        Map.of(
                             "packages",
-                            Collections.singletonMap(
-                                packageInstance.name, collectionParameterOverrides)))));
+                            Map.of(packageInstance.name, collectionParameterOverrides)))));
       } catch (Exception e) {
         throw new SolrException(ErrorCode.SERVER_ERROR, e);
       }
@@ -501,7 +500,7 @@ public class PackageManager implements Closeable {
                         packageInstance.parameterDefaults,
                         collectionParameterOverrides,
                         systemParams);
-                printGreen("Executing " + payload + " for path:" + path);
+                runtime.printSuccess("Executing " + payload + " for path:" + path);
                 boolean shouldExecute = prompt(noprompt);
                 if (shouldExecute) {
                   SolrCLI.postJsonToSolr(solrClient, path, payload);
@@ -514,7 +513,7 @@ public class PackageManager implements Closeable {
                   ErrorCode.BAD_REQUEST, "Non-POST method not supported for setup commands");
             }
           } else {
-            printRed("There is no setup command to execute for plugin: " + plugin.name);
+            runtime.printError("There is no setup command to execute for plugin: " + plugin.name);
           }
         }
       }
@@ -535,7 +534,7 @@ public class PackageManager implements Closeable {
     }
 
     if (!previouslyDeployed.isEmpty()) {
-      printRed(
+      runtime.printError(
           "Already Deployed on "
               + previouslyDeployed
               + ", package: "
@@ -563,7 +562,7 @@ public class PackageManager implements Closeable {
         SolrPackageInstance deployedPackage =
             getPackagesDeployedAsClusterLevelPlugins().get(packageInstance.name);
         if (deployedPackage == null) {
-          printRed(
+          runtime.printError(
               "Cluster level plugin "
                   + plugin.name
                   + " from package "
@@ -573,12 +572,13 @@ public class PackageManager implements Closeable {
           continue;
         }
         for (PluginMeta pluginMeta : (List<PluginMeta>) deployedPackage.getCustomData()) {
-          printGreen("Updating this plugin: " + pluginMeta);
+          runtime.printSuccess("Updating this plugin: " + pluginMeta);
           try {
             // just update the version, let the other metadata same
             pluginMeta.version = packageInstance.version;
             String postBody = "{\"update\": " + Utils.toJSONString(pluginMeta) + "}";
-            printGreen("Posting " + postBody + " to " + PackageUtils.CLUSTER_PLUGINS_PATH);
+            runtime.printSuccess(
+                "Posting " + postBody + " to " + PackageUtils.CLUSTER_PLUGINS_PATH);
             SolrCLI.postJsonToSolr(solrClient, PackageUtils.CLUSTER_PLUGINS_PATH, postBody);
           } catch (Exception e) {
             throw new SolrException(ErrorCode.SERVER_ERROR, e);
@@ -587,9 +587,9 @@ public class PackageManager implements Closeable {
         numberOfClusterPluginsDeployed++;
       }
       if (numberOfClusterPluginsDeployed > 0) {
-        printGreen(numberOfClusterPluginsDeployed + " cluster level plugins updated.");
+        runtime.printSuccess(numberOfClusterPluginsDeployed + " cluster level plugins updated.");
       } else {
-        printRed("No cluster level plugin updated.");
+        runtime.printError("No cluster level plugin updated.");
         clusterPluginFailed = true;
       }
     } else {
@@ -609,10 +609,10 @@ public class PackageManager implements Closeable {
           }
           if (clusterprops != null) {
             Object pkg =
-                ((Map<String, Object>) clusterprops.getOrDefault("plugin", Collections.emptyMap()))
+                ((Map<String, Object>) clusterprops.getOrDefault("plugin", Map.of()))
                     .get(packageInstance.name + ":" + plugin.name);
             if (pkg != null) {
-              printRed(
+              runtime.printError(
                   "Cluster level plugin "
                       + plugin.name
                       + " from package "
@@ -649,7 +649,7 @@ public class PackageManager implements Closeable {
               String path =
                   PackageUtils.resolve(
                       cmd.path, packageInstance.parameterDefaults, overridesMap, systemParams);
-              printGreen("Executing " + payload + " for path:" + path);
+              runtime.printSuccess("Executing " + payload + " for path:" + path);
               boolean shouldExecute = prompt(noprompt);
               if (shouldExecute) {
                 SolrCLI.postJsonToSolr(solrClient, path, payload);
@@ -663,13 +663,13 @@ public class PackageManager implements Closeable {
                 ErrorCode.BAD_REQUEST, "Non-POST method not supported for setup commands");
           }
         } else {
-          printRed("There is no setup command to execute for plugin: " + plugin.name);
+          runtime.printError("There is no setup command to execute for plugin: " + plugin.name);
         }
       }
       if (numberOfClusterPluginsDeployed > 0) {
-        printGreen(numberOfClusterPluginsDeployed + " cluster level plugins setup.");
+        runtime.printSuccess(numberOfClusterPluginsDeployed + " cluster level plugins setup.");
       } else {
-        printRed("No cluster level plugin setup.");
+        runtime.printError("No cluster level plugin setup.");
         clusterPluginFailed = true;
       }
     }
@@ -679,14 +679,15 @@ public class PackageManager implements Closeable {
   private boolean prompt(boolean noprompt) {
     boolean shouldExecute = true;
     if (!noprompt) { // show a prompt asking user to execute the setup command for the plugin
-      PackageUtils.print(
-          SolrCLI.YELLOW,
-          "Execute this command. (If you choose no, you can manually deploy/undeploy this plugin later) (y/n): ");
+      runtime.print(
+          CLIUtils.YELLOW
+              + "Execute this command. (If you choose no, you can manually deploy/undeploy this plugin later) (y/n): "
+              + CLIUtils.RESET);
       try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8)) {
         String userInput = scanner.next();
         if ("no".trim().equalsIgnoreCase(userInput) || "n".trim().equalsIgnoreCase(userInput)) {
           shouldExecute = false;
-          printRed(
+          runtime.printError(
               "Skipping setup command for deploying (deployment verification may fail)."
                   + " Please run this step manually or refer to package documentation.");
         }
@@ -730,11 +731,13 @@ public class PackageManager implements Closeable {
                   .setRequiresCollection(
                       false) /* Making a collection-request, but already baked into path */);
       return (Map<String, String>)
-          response._get("/response/params/packages/" + packageName, Collections.emptyMap());
+          Objects.requireNonNullElse(
+              response._get("/response/params/packages/" + packageName), Map.of());
+
     } catch (Exception ex) {
       // This should be because there are no parameters. Be tolerant here.
       log.warn("There are no parameters to return for package: {}", packageName);
-      return Collections.emptyMap();
+      return Map.of();
     }
   }
 
@@ -767,13 +770,13 @@ public class PackageManager implements Closeable {
                   plugin.name);
           String path =
               PackageUtils.resolve(cmd.path, pkg.parameterDefaults, overridesMap, systemParams);
-          printGreen("Executing " + solrUrl + path + " for cluster level plugin");
+          runtime.printSuccess("Executing " + solrUrl + path + " for cluster level plugin");
 
           if ("GET".equalsIgnoreCase(cmd.method)) {
             String response =
                 PackageUtils.getJsonStringFromNonCollectionApi(
                     solrClient, path, new ModifiableSolrParams());
-            printGreen(response);
+            runtime.printSuccess(response);
             String actualValue = null;
             try {
               String jsonPath =
@@ -781,16 +784,16 @@ public class PackageManager implements Closeable {
                       cmd.condition, pkg.parameterDefaults, overridesMap, systemParams);
               actualValue = jsonPathRead(response, jsonPath);
             } catch (PathNotFoundException ex) {
-              printRed("Failed to deploy plugin: " + plugin.name);
+              runtime.printError("Failed to deploy plugin: " + plugin.name);
               success = false;
             }
             if (actualValue != null) {
               String expectedValue =
                   PackageUtils.resolve(
                       cmd.expected, pkg.parameterDefaults, overridesMap, systemParams);
-              printGreen("Actual: " + actualValue + ", expected: " + expectedValue);
+              runtime.printSuccess("Actual: " + actualValue + ", expected: " + expectedValue);
               if (!expectedValue.equals(actualValue)) {
-                printRed("Failed to deploy plugin: " + plugin.name);
+                runtime.printError("Failed to deploy plugin: " + plugin.name);
                 success = false;
               }
             }
@@ -817,13 +820,13 @@ public class PackageManager implements Closeable {
             String path =
                 PackageUtils.resolve(
                     cmd.path, pkg.parameterDefaults, collectionParameterOverrides, systemParams);
-            printGreen("Executing " + solrUrl + path + " for collection:" + collection);
+            runtime.printSuccess("Executing " + solrUrl + path + " for collection:" + collection);
 
             if ("GET".equalsIgnoreCase(cmd.method)) {
               String response =
                   PackageUtils.getJsonStringFromCollectionApi(
                       solrClient, path, new ModifiableSolrParams());
-              printGreen(response);
+              runtime.printSuccess(response);
               String actualValue = null;
               try {
                 String jsonPath =
@@ -834,7 +837,7 @@ public class PackageManager implements Closeable {
                         systemParams);
                 actualValue = jsonPathRead(response, jsonPath);
               } catch (PathNotFoundException ex) {
-                printRed("Failed to deploy plugin: " + plugin.name);
+                runtime.printError("Failed to deploy plugin: " + plugin.name);
                 success = false;
               }
               if (actualValue != null) {
@@ -844,9 +847,9 @@ public class PackageManager implements Closeable {
                         pkg.parameterDefaults,
                         collectionParameterOverrides,
                         systemParams);
-                printGreen("Actual: " + actualValue + ", expected: " + expectedValue);
+                runtime.printSuccess("Actual: " + actualValue + ", expected: " + expectedValue);
                 if (!expectedValue.equals(actualValue)) {
-                  printRed("Failed to deploy plugin: " + plugin.name);
+                  runtime.printError("Failed to deploy plugin: " + plugin.name);
                   success = false;
                 }
               }
@@ -925,23 +928,23 @@ public class PackageManager implements Closeable {
     boolean pegToLatest = PackageUtils.LATEST.equals(version);
     SolrPackageInstance packageInstance = getPackageInstance(packageName, version);
     if (packageInstance == null) {
-      printRed(
+      runtime.printError(
           "Package instance doesn't exist: "
               + packageName
               + ":"
               + version
               + ". Use install command to install this version first.");
-      System.exit(1);
+      runtime.exit(1);
     }
 
     Manifest manifest = packageInstance.manifest;
     if (!SolrVersion.LATEST.satisfies(manifest.versionConstraint)) {
-      printRed(
+      runtime.printError(
           "Version incompatible! Solr version: "
               + SolrVersion.LATEST
               + ", package version constraint: "
               + manifest.versionConstraint);
-      System.exit(1);
+      runtime.exit(1);
     }
 
     boolean res =
@@ -953,8 +956,11 @@ public class PackageManager implements Closeable {
             Arrays.asList(collections),
             shouldInstallClusterPlugins,
             parameters);
-    PackageUtils.print(
-        res ? SolrCLI.GREEN : SolrCLI.RED, res ? "Deployment successful" : "Deployment failed");
+    if (res) {
+      runtime.printSuccess("Deployment successful");
+    } else {
+      runtime.printError("Deployment failed");
+    }
   }
 
   /** Undeploys a package from given collections. */
@@ -968,7 +974,7 @@ public class PackageManager implements Closeable {
       SolrPackageInstance deployedPackage =
           getPackagesDeployedAsClusterLevelPlugins().get(packageName);
       if (deployedPackage == null) {
-        printRed("Cluster level plugins from package " + packageName + " not deployed.");
+        runtime.printError("Cluster level plugins from package " + packageName + " not deployed.");
       } else {
         for (Plugin plugin : deployedPackage.plugins) {
           if (!shouldUndeployClusterPlugins || !"cluster".equalsIgnoreCase(plugin.type)) continue;
@@ -989,15 +995,12 @@ public class PackageManager implements Closeable {
                     PackageUtils.resolve(
                         getMapper().writeValueAsString(cmd.payload),
                         deployedPackage.parameterDefaults,
-                        Collections.emptyMap(),
+                        Map.of(),
                         systemParams);
                 String path =
                     PackageUtils.resolve(
-                        cmd.path,
-                        deployedPackage.parameterDefaults,
-                        Collections.emptyMap(),
-                        systemParams);
-                printGreen("Executing " + payload + " for path:" + path);
+                        cmd.path, deployedPackage.parameterDefaults, Map.of(), systemParams);
+                runtime.printSuccess("Executing " + payload + " for path:" + path);
                 SolrCLI.postJsonToSolr(solrClient, path, payload);
               } catch (Exception ex) {
                 throw new SolrException(ErrorCode.SERVER_ERROR, ex);
@@ -1007,7 +1010,8 @@ public class PackageManager implements Closeable {
                   ErrorCode.BAD_REQUEST, "Non-POST method not supported for uninstall commands");
             }
           } else {
-            printRed("There is no uninstall command to execute for plugin: " + plugin.name);
+            runtime.printError(
+                "There is no uninstall command to execute for plugin: " + plugin.name);
           }
         }
       }
@@ -1016,7 +1020,7 @@ public class PackageManager implements Closeable {
     for (String collection : collections) {
       SolrPackageInstance deployedPackage = getPackagesDeployed(collection).get(packageName);
       if (deployedPackage == null) {
-        printRed("Package " + packageName + " not deployed on collection " + collection);
+        runtime.printError("Package " + packageName + " not deployed on collection " + collection);
         continue;
       }
       Map<String, String> collectionParameterOverrides = getPackageParams(packageName, collection);
@@ -1053,7 +1057,7 @@ public class PackageManager implements Closeable {
                       deployedPackage.parameterDefaults,
                       collectionParameterOverrides,
                       systemParams);
-              printGreen("Executing " + payload + " for path:" + path);
+              runtime.printSuccess("Executing " + payload + " for path:" + path);
               SolrCLI.postJsonToSolr(solrClient, path, payload);
             } catch (Exception ex) {
               throw new SolrException(ErrorCode.SERVER_ERROR, ex);
@@ -1063,7 +1067,7 @@ public class PackageManager implements Closeable {
                 ErrorCode.BAD_REQUEST, "Non-POST method not supported for uninstall commands");
           }
         } else {
-          printRed("There is no uninstall command to execute for plugin: " + plugin.name);
+          runtime.printError("There is no uninstall command to execute for plugin: " + plugin.name);
         }
       }
 
@@ -1091,7 +1095,7 @@ public class PackageManager implements Closeable {
   public Map<String, String> getDeployedCollections(String packageName) {
     List<String> allCollections;
     try {
-      allCollections = zkClient.getChildren(ZkStateReader.COLLECTIONS_ZKNODE, null, true);
+      allCollections = zkClient.getChildren(ZkStateReader.COLLECTIONS_ZKNODE, null);
     } catch (KeeperException | InterruptedException e) {
       throw new SolrException(ErrorCode.SERVICE_UNAVAILABLE, e);
     }
