@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -40,7 +39,6 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.core.CoreContainer;
-import org.apache.solr.core.SolrCore;
 import org.apache.solr.core.SolrResourceLoader;
 import org.apache.solr.filestore.FileStoreUtils;
 import org.slf4j.Logger;
@@ -79,7 +77,7 @@ public class SolrPackageLoader implements Closeable {
   }
 
   public Map<String, SolrPackage> getPackages() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   public void refreshPackageConf() {
@@ -107,9 +105,7 @@ public class SolrPackageLoader implements Closeable {
         }
       }
     }
-    for (SolrCore core : coreContainer.getCores()) {
-      core.getPackageListeners().packagesUpdated(updated);
-    }
+    coreContainer.forEachLoadedCore(core -> core.getPackageListeners().packagesUpdated(updated));
     myCopy = packageAPI.pkgs;
   }
 
@@ -146,10 +142,8 @@ public class SolrPackageLoader implements Closeable {
   public void notifyListeners(String pkg) {
     SolrPackage p = packageClassLoaders.get(pkg);
     if (p != null) {
-      List<SolrPackage> l = Collections.singletonList(p);
-      for (SolrCore core : coreContainer.getCores()) {
-        core.getPackageListeners().packagesUpdated(l);
-      }
+      List<SolrPackage> l = List.of(p);
+      coreContainer.forEachLoadedCore(core -> core.getPackageListeners().packagesUpdated(l));
     }
   }
 
@@ -279,14 +273,14 @@ public class SolrPackageLoader implements Closeable {
           throw new RuntimeException("Cannot load package: " + errs);
         }
         for (String file : version.files) {
-          paths.add(coreContainer.getFileStore().getRealpath(file));
+          paths.add(coreContainer.getFileStore().getRealPath(file));
         }
 
         loader =
             new PackageResourceLoader(
                 "PACKAGE_LOADER: " + parent.name() + ":" + version,
                 paths,
-                Paths.get(coreContainer.getSolrHome()),
+                coreContainer.getSolrHome(),
                 coreContainer.getResourceLoader().getClassLoader());
       }
 
