@@ -16,11 +16,9 @@
  */
 package org.apache.solr.spelling;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import org.apache.lucene.index.IndexReader;
@@ -61,7 +59,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
   public static final String SCORE_COMP = "score";
   public static final String FREQ_COMP = "freq";
 
-  protected org.apache.lucene.search.spell.SpellChecker spellChecker;
+  protected SpellChecker spellChecker;
 
   protected String sourceLocation;
   /*
@@ -71,7 +69,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
   protected Dictionary dictionary;
 
   public static final int DEFAULT_SUGGESTION_COUNT = 5;
-  protected String indexDir;
+  protected Path indexDir;
   protected float accuracy = 0.5f;
   public static final String FIELD = "field";
 
@@ -80,13 +78,14 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
   @Override
   public String init(NamedList<?> config, SolrCore core) {
     super.init(config, core);
-    indexDir = (String) config.get(INDEX_DIR);
+    String indexPath = (String) config.get(INDEX_DIR);
+    indexDir = (indexPath != null) ? Path.of(indexPath) : null;
+
     // If indexDir is relative then create index inside core.getDataDir()
     if (indexDir != null) {
-      if (!new File(indexDir).isAbsolute()) {
-        indexDir = core.getDataDir() + File.separator + indexDir;
-      }
+      indexDir = Path.of(core.getDataDir()).resolve(indexDir);
     }
+
     sourceLocation = (String) config.get(LOCATION);
     String compClass = (String) config.get(COMPARATOR_CLASS);
     Comparator<SuggestWord> comp = null;
@@ -142,7 +141,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
     int count = Math.max(options.count, AbstractLuceneSpellChecker.DEFAULT_SUGGESTION_COUNT);
     for (Token token : options.tokens) {
       if (token.length() == 0) {
-        result.add(token, Collections.emptyList());
+        result.add(token, List.of());
         continue;
       }
       String tokenText = new String(token.buffer(), 0, token.length());
@@ -194,7 +193,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
             result.add(token, suggestions[i], reader.docFreq(term));
           }
         } else {
-          List<String> suggList = Collections.emptyList();
+          List<String> suggList = List.of();
           result.add(token, suggList);
         }
       } else {
@@ -205,7 +204,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
           }
           result.add(token, suggList);
         } else {
-          List<String> suggList = Collections.emptyList();
+          List<String> suggList = List.of();
           result.add(token, suggList);
         }
       }
@@ -235,7 +234,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
       // files can't be opened.  It would be better for SpellChecker to hold a single IW instance,
       // and close it on close, but Solr never seems to close its spell checkers.  Wrapping as
       // FilterDirectory prevents IndexWriter from catching the pending deletions:
-      index = new FilterDirectory(FSDirectory.open(Path.of(indexDir))) {};
+      index = new FilterDirectory(FSDirectory.open(indexDir)) {};
     } else {
       index = new ByteBuffersDirectory();
     }
@@ -268,7 +267,7 @@ public abstract class AbstractLuceneSpellChecker extends SolrSpellChecker {
   /*
    * @return the Index directory
    * */
-  public String getIndexDir() {
+  public Path getIndexDir() {
     return indexDir;
   }
 
