@@ -18,20 +18,25 @@
 package org.apache.solr.handler.admin;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.apache.solr.api.ApiBag.EMPTY_SPEC;
 import static org.apache.solr.client.solrj.SolrRequest.METHOD.POST;
 import static org.apache.solr.common.params.CommonParams.COLLECTIONS_HANDLER_PATH;
 import static org.apache.solr.common.params.CommonParams.CONFIGSETS_HANDLER_PATH;
 import static org.apache.solr.common.params.CommonParams.CORES_HANDLER_PATH;
 import static org.apache.solr.common.util.ValidatingJsonMap.NOT_NULL;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.api.Api;
@@ -43,14 +48,12 @@ import org.apache.solr.api.V2HttpCall;
 import org.apache.solr.api.V2HttpCall.CompositeApi;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.common.annotation.JsonProperty;
-import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.CommandOperation;
 import org.apache.solr.common.util.ContentStream;
 import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.common.util.JsonSchemaValidator;
-import org.apache.solr.common.util.PathTrie;
 import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
@@ -60,7 +63,6 @@ import org.apache.solr.core.PluginBag;
 import org.apache.solr.handler.PingRequestHandler;
 import org.apache.solr.handler.SchemaHandler;
 import org.apache.solr.handler.SolrConfigHandler;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.request.SolrRequestHandler;
@@ -72,7 +74,7 @@ public class TestApiFramework extends SolrTestCaseJ4 {
   public void testFramework() {
     Map<String, Object[]> calls = new HashMap<>();
     Map<String, Object> out = new HashMap<>();
-    CoreContainer mockCC = TestCoreAdminApis.getCoreContainerMock(calls, out);
+    CoreContainer mockCC = getCoreContainerMock(calls, out);
     PluginBag<SolrRequestHandler> containerHandlers =
         new PluginBag<>(SolrRequestHandler.class, null, false);
     TestCollectionAPIs.MockCollectionsHandler collectionsHandler =
@@ -110,19 +112,9 @@ public class TestApiFramework extends SolrTestCaseJ4 {
     SolrQueryResponse rsp = invoke(containerHandlers, null, "/collections/_introspect", mockCC);
 
     Set<String> methodNames = new HashSet<>();
-    methodNames.add(rsp.getValues()._getStr("/spec[0]/methods[0]", null));
-    methodNames.add(rsp.getValues()._getStr("/spec[1]/methods[0]", null));
-    methodNames.add(rsp.getValues()._getStr("/spec[2]/methods[0]", null));
-    assertTrue(methodNames.contains("POST"));
-    assertTrue(methodNames.contains("GET"));
-
-    methodNames = new HashSet<>();
-
-    rsp =
-        invoke(
-            coreHandlers, "/schema/_introspect", "/collections/hello/schema/_introspect", mockCC);
-    methodNames.add(rsp.getValues()._getStr("/spec[0]/methods[0]", null));
-    methodNames.add(rsp.getValues()._getStr("/spec[1]/methods[0]", null));
+    methodNames.add(rsp.getValues()._getStr("/spec[0]/methods[0]"));
+    methodNames.add(rsp.getValues()._getStr("/spec[1]/methods[0]"));
+    methodNames.add(rsp.getValues()._getStr("/spec[2]/methods[0]"));
     assertTrue(methodNames.contains("POST"));
   }
 
@@ -135,13 +127,13 @@ public class TestApiFramework extends SolrTestCaseJ4 {
 
     ValidatingJsonMap spec = apis.get(0).getSpec();
 
-    assertEquals("POST", spec._getStr("/methods[0]", null));
-    assertEquals("POST", spec._getStr("/methods[0]", null));
-    assertEquals("/cluster/package", spec._getStr("/url/paths[0]", null));
-    assertEquals("string", spec._getStr("/commands/add/properties/package/type", null));
-    assertEquals("array", spec._getStr("/commands/add/properties/files/type", null));
-    assertEquals("string", spec._getStr("/commands/add/properties/files/items/type", null));
-    assertEquals("string", spec._getStr("/commands/delete/items/type", null));
+    assertEquals("POST", spec._getStr("/methods[0]"));
+    assertEquals("POST", spec._getStr("/methods[0]"));
+    assertEquals("/cluster/package", spec._getStr("/url/paths[0]"));
+    assertEquals("string", spec._getStr("/commands/add/properties/package/type"));
+    assertEquals("array", spec._getStr("/commands/add/properties/files/type"));
+    assertEquals("string", spec._getStr("/commands/add/properties/files/items/type"));
+    assertEquals("string", spec._getStr("/commands/delete/items/type"));
     SolrQueryResponse rsp =
         v2ApiInvoke(
             apiBag,
@@ -167,8 +159,8 @@ public class TestApiFramework extends SolrTestCaseJ4 {
             new ByteArrayInputStream(
                 "{\"package\":\"mypkg\", \"version\": \"1.0\", \"files\" : [\"a.jar\", \"b.jar\"]}"
                     .getBytes(UTF_8)));
-    assertEquals("mypkg", rsp.getValues()._getStr("payload/package", null));
-    assertEquals("1.0", rsp.getValues()._getStr("payload/version", null));
+    assertEquals("mypkg", rsp.getValues()._getStr("payload/package"));
+    assertEquals("1.0", rsp.getValues()._getStr("payload/version"));
   }
 
   public static class C {
@@ -251,7 +243,6 @@ public class TestApiFramework extends SolrTestCaseJ4 {
 
   private static SolrQueryResponse v2ApiInvoke(
       ApiBag bag, String uri, String method, SolrParams params, InputStream payload) {
-    if (params == null) params = new ModifiableSolrParams();
     SolrQueryResponse rsp = new SolrQueryResponse();
     HashMap<String, String> templateVals = new HashMap<>();
     Api[] currentApi = new Api[1];
@@ -266,14 +257,12 @@ public class TestApiFramework extends SolrTestCaseJ4 {
 
           @Override
           protected Map<String, JsonSchemaValidator> getValidators() {
-            return currentApi[0] == null
-                ? Collections.emptyMap()
-                : currentApi[0].getCommandSchema();
+            return currentApi[0] == null ? Map.of() : currentApi[0].getCommandSchema();
           }
 
           @Override
           public Iterable<ContentStream> getContentStreams() {
-            return Collections.singletonList(
+            return List.of(
                 new ContentStreamBase() {
                   @Override
                   public InputStream getStream() {
@@ -287,26 +276,6 @@ public class TestApiFramework extends SolrTestCaseJ4 {
 
     api.call(req, rsp);
     return rsp;
-  }
-
-  public void testTrailingTemplatePaths() {
-    PathTrie<Api> registry = new PathTrie<>();
-    Api api =
-        new Api(EMPTY_SPEC) {
-          @Override
-          public void call(SolrQueryRequest req, SolrQueryResponse rsp) {}
-        };
-    Api intropsect = new ApiBag.IntrospectApi(api, false);
-    ApiBag.registerIntrospect(
-        Collections.emptyMap(), registry, "/c/.system/blob/{name}", intropsect);
-    ApiBag.registerIntrospect(
-        Collections.emptyMap(), registry, "/c/.system/{x}/{name}", intropsect);
-    assertEquals(
-        intropsect, registry.lookup("/c/.system/blob/random_string/_introspect", new HashMap<>()));
-    assertEquals(intropsect, registry.lookup("/c/.system/blob/_introspect", new HashMap<>()));
-    assertEquals(intropsect, registry.lookup("/c/.system/_introspect", new HashMap<>()));
-    assertEquals(intropsect, registry.lookup("/c/.system/v1/_introspect", new HashMap<>()));
-    assertEquals(intropsect, registry.lookup("/c/.system/v1/v2/_introspect", new HashMap<>()));
   }
 
   private SolrQueryResponse invoke(
@@ -323,8 +292,7 @@ public class TestApiFramework extends SolrTestCaseJ4 {
     } else {
       api = V2HttpCall.getApiInfo(mockCC.getRequestHandlers(), fullPath, "GET", fullPath, parts);
       if (api == null) api = new CompositeApi(null);
-      if (api instanceof CompositeApi) {
-        CompositeApi compositeApi = (CompositeApi) api;
+      if (api instanceof CompositeApi compositeApi) {
         api = V2HttpCall.getApiInfo(reqHandlers, path, "GET", fullPath, parts);
         compositeApi.add(api);
         api = compositeApi;
@@ -332,11 +300,11 @@ public class TestApiFramework extends SolrTestCaseJ4 {
     }
 
     SolrQueryResponse rsp = new SolrQueryResponse();
-    LocalSolrQueryRequest req =
-        new LocalSolrQueryRequest(null, new MapSolrParams(new HashMap<>())) {
+    SolrQueryRequestBase req =
+        new SolrQueryRequestBase(null, SolrParams.of()) {
           @Override
           public List<CommandOperation> getCommands(boolean validateInput) {
-            return Collections.emptyList();
+            return List.of();
           }
         };
 
@@ -365,5 +333,41 @@ public class TestApiFramework extends SolrTestCaseJ4 {
             val);
       }
     }
+  }
+
+  @SuppressWarnings("unchecked")
+  public static CoreContainer getCoreContainerMock(
+      final Map<String, Object[]> in, Map<String, Object> out) {
+    assumeWorkingMockito();
+
+    CoreContainer mockCC = mock(CoreContainer.class);
+    when(mockCC.create(any(String.class), any(Path.class), any(Map.class), anyBoolean()))
+        .thenAnswer(
+            invocationOnMock -> {
+              in.put("create", invocationOnMock.getArguments());
+              return null;
+            });
+
+    doAnswer(
+            invocationOnMock -> {
+              in.put("rename", invocationOnMock.getArguments());
+              return null;
+            })
+        .when(mockCC)
+        .rename(any(String.class), any(String.class));
+
+    doAnswer(
+            invocationOnMock -> {
+              in.put("unload", invocationOnMock.getArguments());
+              return null;
+            })
+        .when(mockCC)
+        .unload(any(String.class), anyBoolean(), anyBoolean(), anyBoolean());
+
+    when(mockCC.getCoreRootDirectory()).thenReturn(Path.of("coreroot"));
+    when(mockCC.getContainerProperties()).thenReturn(new Properties());
+
+    when(mockCC.getRequestHandlers()).thenAnswer(invocationOnMock -> out.get("getRequestHandlers"));
+    return mockCC;
   }
 }
