@@ -66,7 +66,7 @@ public class TestRetrieveFieldsOptimizer extends SolrTestCaseJ4 {
     System.setProperty("managed.schema.mutable", "true");
     System.setProperty(
         "managed.schema.resourceName", "schema-one-field-no-dynamic-field-unique-key.xml");
-    System.setProperty("enable.update.log", "false");
+    System.setProperty("solr.index.updatelog.enabled", "false");
 
     initCore("solrconfig-managed-schema.xml", "ignoredSchemaName");
 
@@ -180,9 +180,9 @@ public class TestRetrieveFieldsOptimizer extends SolrTestCaseJ4 {
     String id = "str" + idx;
     sdoc.addField("str", id);
     sdoc.addField(idNotStoredDv, id);
-    fieldsExpectedVals.put(idNotStoredDv, Collections.singletonList(id));
+    fieldsExpectedVals.put(idNotStoredDv, List.of(id));
     sdoc.addField(idStoredNotDv, id);
-    fieldsExpectedVals.put(idStoredNotDv, Collections.singletonList(id));
+    fieldsExpectedVals.put(idStoredNotDv, List.of(id));
 
     for (RetrieveField field : fieldsHolder.fields.values()) {
       if (field.name.equals(idNotStoredDv) || field.name.equals(idStoredNotDv)) {
@@ -314,10 +314,8 @@ public class TestRetrieveFieldsOptimizer extends SolrTestCaseJ4 {
     SolrQueryRequest req = lrf.makeRequest("q", "*:*", CommonParams.FL, fl);
     SolrQueryResponse rsp = h.queryAndResponse("", req);
 
-    BinaryQueryResponseWriter writer =
-        (BinaryQueryResponseWriter) core.getQueryResponseWriter("javabin");
     ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    writer.write(baos, req, rsp);
+    core.getQueryResponseWriter("javabin").write(baos, req, rsp);
 
     // This is really the main point!
     assertEquals(
@@ -481,7 +479,7 @@ class FieldHolder {
         storedMvFields.add(field);
       }
     }
-    return schema.addFields(fieldsToAdd, Collections.emptyMap(), false);
+    return schema.addFields(fieldsToAdd, Map.of(), false);
   }
 
   RetrieveField getTestField(String field) {
