@@ -16,11 +16,14 @@
  */
 package org.apache.solr.search;
 
-import java.io.File;
-import java.util.Collections;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Map;
+import org.apache.commons.io.file.PathUtils;
+import org.apache.lucene.tests.mockfile.FilterPath;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.util.ErrorLogMuter;
 import org.junit.Before;
 
 public class TestAddFieldRealTimeGet extends TestRTGBase {
@@ -30,24 +33,25 @@ public class TestAddFieldRealTimeGet extends TestRTGBase {
 
   @Before
   public void initManagedSchemaCore() throws Exception {
-    final String tmpSolrHomePath = createTempDir().toFile().getAbsolutePath();
-    File tmpSolrHome = new File(tmpSolrHomePath).getAbsoluteFile();
-    File tmpConfDir = new File(tmpSolrHome, confDir);
-    File testHomeConfDir = new File(TEST_HOME(), confDir);
+    final Path tmpSolrHome = createTempDir();
+    Path tmpConfDir = FilterPath.unwrap(tmpSolrHome.resolve(confDir));
+    Path testHomeConfDir = TEST_HOME().resolve(confDir);
+    Files.createDirectories(tmpConfDir);
     final String configFileName = "solrconfig-managed-schema.xml";
     final String schemaFileName = "schema-id-and-version-fields-only.xml";
-    FileUtils.copyFileToDirectory(new File(testHomeConfDir, configFileName), tmpConfDir);
-    FileUtils.copyFileToDirectory(new File(testHomeConfDir, schemaFileName), tmpConfDir);
-    FileUtils.copyFileToDirectory(
-        new File(testHomeConfDir, "solrconfig.snippet.randomindexconfig.xml"), tmpConfDir);
+    PathUtils.copyFileToDirectory(testHomeConfDir.resolve(configFileName), tmpConfDir);
+    PathUtils.copyFileToDirectory(testHomeConfDir.resolve(schemaFileName), tmpConfDir);
+    PathUtils.copyFileToDirectory(
+        testHomeConfDir.resolve("solrconfig.snippet.randomindexconfig.xml"), tmpConfDir);
 
     // initCore will trigger an upgrade to managed schema, since the solrconfig has
     // <schemaFactory class="ManagedIndexSchemaFactory" ... />
     System.setProperty("managed.schema.mutable", "true");
-    System.setProperty("enable.update.log", "true");
-    initCore(configFileName, schemaFileName, tmpSolrHome.getPath());
+    System.setProperty("solr.index.updatelog.enabled", "true");
+    initCore(configFileName, schemaFileName, tmpSolrHome);
   }
 
+  @SuppressWarnings("try")
   public void test() throws Exception {
     clearIndex();
     assertU(commit());
@@ -56,14 +60,14 @@ public class TestAddFieldRealTimeGet extends TestRTGBase {
     String newFieldType = "string";
     String newFieldValue = "xyz";
 
-    ignoreException("unknown field");
-    assertFailedU(
-        "Should fail due to unknown field '" + newFieldName + "'",
-        adoc("id", "1", newFieldName, newFieldValue));
-    unIgnoreException("unknown field");
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex("unknown field")) {
+      assertFailedU(
+          "Should fail due to unknown field '" + newFieldName + "'",
+          adoc("id", "1", newFieldName, newFieldValue));
+    }
 
     IndexSchema schema = h.getCore().getLatestSchema();
-    SchemaField newField = schema.newField(newFieldName, newFieldType, Collections.emptyMap());
+    SchemaField newField = schema.newField(newFieldName, newFieldType, Map.of());
     IndexSchema newSchema = schema.addField(newField);
     h.getCore().setLatestSchema(newSchema);
 
@@ -71,10 +75,10 @@ public class TestAddFieldRealTimeGet extends TestRTGBase {
     assertU(adoc("id", "1", newFieldName, newFieldValue));
     assertJQ(req("q", "id:1"), "/response/numFound==0");
     assertJQ(
-        req("qt", "/get", "id", "1", "fl", "id," + newFieldName),
+        reqWithPath("/get", "id", "1", "fl", "id," + newFieldName),
         "=={'doc':{'id':'1'," + newFieldKeyValue + "}}");
     assertJQ(
-        req("qt", "/get", "ids", "1", "fl", "id," + newFieldName),
+        reqWithPath("/get", "ids", "1", "fl", "id," + newFieldName),
         "=={'response':{'numFound':1,'start':0,'numFoundExact':true,'docs':[{'id':'1',"
             + newFieldKeyValue
             + "}]}}");
@@ -83,10 +87,10 @@ public class TestAddFieldRealTimeGet extends TestRTGBase {
 
     assertJQ(req("q", "id:1"), "/response/numFound==1");
     assertJQ(
-        req("qt", "/get", "id", "1", "fl", "id," + newFieldName),
+        reqWithPath("/get", "id", "1", "fl", "id," + newFieldName),
         "=={'doc':{'id':'1'," + newFieldKeyValue + "}}");
     assertJQ(
-        req("qt", "/get", "ids", "1", "fl", "id," + newFieldName),
+        reqWithPath("/get", "ids", "1", "fl", "id," + newFieldName),
         "=={'response':{'numFound':1,'start':0,'numFoundExact':true,'docs':[{'id':'1',"
             + newFieldKeyValue
             + "}]}}");
