@@ -17,7 +17,6 @@
 package org.apache.solr.uninverting;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.lucene.document.Document;
@@ -80,18 +79,17 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'bar' comes before 'foo'
-    assertEquals("bar", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[1].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
 
     TestUtil.checkReader(ir);
     ir.close();
@@ -119,19 +117,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
-    assertNull(searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("bar", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -156,18 +153,17 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", sortType, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'foo' comes after 'bar' in reverse order
-    assertEquals("foo", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("bar", searcher.doc(td.scoreDocs[1].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -194,8 +190,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -203,11 +198,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
-    assertNull(searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("bar", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -234,8 +229,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -243,11 +237,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
-    assertEquals("foo", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("bar", searcher.doc(td.scoreDocs[1].doc).get("value"));
+    assertEquals(3, td.totalHits.value());
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     // null comes last
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -274,8 +268,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -284,11 +277,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
-    assertEquals("bar", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[1].doc).get("value"));
+    assertEquals(3, td.totalHits.value());
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     // null comes last
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -315,8 +308,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("value", "bar", Field.Store.YES));
     writer.addDocument(doc);
     Type type = sortType == SortField.Type.STRING ? Type.SORTED : Type.BINARY;
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", type));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", type));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -325,11 +317,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sf);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null comes first
-    assertNull(searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("bar", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -352,7 +344,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(SortField.FIELD_DOC);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // docid 0, then docid 1
     assertEquals(0, td.scoreDocs[0].doc);
     assertEquals(1, td.scoreDocs[1].doc);
@@ -378,7 +370,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(new SortField(null, SortField.Type.DOC, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // docid 1, then docid 0
     assertEquals(1, td.scoreDocs[0].doc);
     assertEquals(0, td.scoreDocs[1].doc);
@@ -404,11 +396,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort();
 
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort);
-    assertEquals(2, actual.totalHits.value);
+    assertEquals(2, actual.totalHits.value());
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
     // the two topdocs should be the same
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     for (int i = 0; i < actual.scoreDocs.length; i++) {
       assertEquals(actual.scoreDocs[i].doc, expected.scoreDocs[i].doc);
     }
@@ -436,11 +428,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(new SortField(null, SortField.Type.SCORE, true));
 
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort);
-    assertEquals(2, actual.totalHits.value);
+    assertEquals(2, actual.totalHits.value());
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
     // the two topdocs should be the reverse of each other
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     assertEquals(actual.scoreDocs[0].doc, expected.scoreDocs[1].doc);
     assertEquals(actual.scoreDocs[1].doc, expected.scoreDocs[0].doc);
     TestUtil.checkReader(ir);
@@ -465,19 +457,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("300000", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("300000", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -498,19 +489,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as a 0
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -533,8 +523,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -543,11 +532,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as an Integer.MAX_VALUE
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -570,19 +559,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.INTEGER_POINT));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.INTEGER_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("300000", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("300000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -602,19 +590,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("300000", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("300000", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -633,19 +620,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as a 0
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -667,8 +653,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -677,11 +662,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as an Integer.MAX_VALUE
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -701,19 +686,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyIntField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_INTEGER));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.INT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("300000", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("300000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -735,20 +719,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("3000000000", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -768,20 +750,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -803,9 +783,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -814,11 +792,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Long.MAX_VALUE
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -840,20 +818,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LongPoint("value", 4));
     doc.add(new StoredField("value", 4));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LONG_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LONG_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("3000000000", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -872,20 +848,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("3000000000", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -903,20 +877,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -937,9 +909,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -948,11 +918,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Long.MAX_VALUE
-    assertEquals("-1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -971,20 +941,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyLongField("value", 4, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_LONG));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_LONG));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.LONG, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("3000000000", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("3000000000", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1006,20 +974,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("30.1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1039,20 +1005,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1074,9 +1038,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -1085,11 +1047,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Float.MAX_VALUE
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1111,20 +1073,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new FloatPoint("value", 4.2f));
     doc.add(new StoredField("value", 4.2f));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.FLOAT_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.FLOAT_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("30.1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1143,20 +1103,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // numeric order
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("30.1", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1174,20 +1132,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as 0
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1208,9 +1164,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -1219,11 +1173,11 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // null is treated as Float.MAX_VALUE
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1242,20 +1196,18 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc = new Document();
     doc.add(new LegacyFloatField("value", 4.2f, Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_FLOAT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_FLOAT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.FLOAT, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(3, td.totalHits.value);
+    assertEquals(3, td.totalHits.value());
     // reverse numeric order
-    assertEquals("30.1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[2].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("4.2", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1281,21 +1233,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("30.1", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1314,19 +1266,29 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new StoredField("value", -0d));
     writer.addDocument(doc);
     doc = new Document();
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // numeric order
-    double v0 = searcher.doc(td.scoreDocs[0].doc).getField("value").numericValue().doubleValue();
-    double v1 = searcher.doc(td.scoreDocs[1].doc).getField("value").numericValue().doubleValue();
+    double v0 =
+        searcher
+            .storedFields()
+            .document(td.scoreDocs[0].doc)
+            .getField("value")
+            .numericValue()
+            .doubleValue();
+    double v1 =
+        searcher
+            .storedFields()
+            .document(td.scoreDocs[1].doc)
+            .getField("value")
+            .numericValue()
+            .doubleValue();
     assertEquals(0, v0, 0d);
     assertEquals(0, v1, 0d);
     // check sign bits
@@ -1355,21 +1317,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as a 0
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1396,9 +1358,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
@@ -1407,12 +1367,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as Double.MAX_VALUE
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1438,21 +1400,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new DoublePoint("value", 4.2333333333332));
     doc.add(new StoredField("value", 4.2333333333332));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.DOUBLE_POINT));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.DOUBLE_POINT));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir, false);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
-    assertEquals("30.1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1475,20 +1437,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("30.1", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1506,18 +1469,29 @@ public class TestFieldCacheSort extends SolrTestCase {
     writer.addDocument(doc);
     doc = new Document();
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // numeric order
-    double v0 = searcher.doc(td.scoreDocs[0].doc).getField("value").numericValue().doubleValue();
-    double v1 = searcher.doc(td.scoreDocs[1].doc).getField("value").numericValue().doubleValue();
+    double v0 =
+        searcher
+            .storedFields()
+            .document(td.scoreDocs[0].doc)
+            .getField("value")
+            .numericValue()
+            .doubleValue();
+    double v1 =
+        searcher
+            .storedFields()
+            .document(td.scoreDocs[1].doc)
+            .getField("value")
+            .numericValue()
+            .doubleValue();
     assertEquals(0, v0, 0d);
     assertEquals(0, v1, 0d);
     // check sign bits
@@ -1544,20 +1518,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as a 0
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1582,8 +1557,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
@@ -1592,12 +1566,14 @@ public class TestFieldCacheSort extends SolrTestCase {
     Sort sort = new Sort(sortField);
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // null treated as Double.MAX_VALUE
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertNull(searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertNull(searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1620,20 +1596,21 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(new LegacyDoubleField("value", 4.2333333333332, Field.Store.YES));
     writer.addDocument(doc);
     IndexReader ir =
-        UninvertingReader.wrap(
-            writer.getReader(), Collections.singletonMap("value", Type.LEGACY_DOUBLE));
+        UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.LEGACY_DOUBLE));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.DOUBLE, true));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(4, td.totalHits.value);
+    assertEquals(4, td.totalHits.value());
     // numeric order
-    assertEquals("30.1", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("4.2333333333333", searcher.doc(td.scoreDocs[1].doc).get("value"));
-    assertEquals("4.2333333333332", searcher.doc(td.scoreDocs[2].doc).get("value"));
-    assertEquals("-1.3", searcher.doc(td.scoreDocs[3].doc).get("value"));
+    assertEquals("30.1", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals(
+        "4.2333333333333", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
+    assertEquals(
+        "4.2333333333332", searcher.storedFields().document(td.scoreDocs[2].doc).get("value"));
+    assertEquals("-1.3", searcher.storedFields().document(td.scoreDocs[3].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1655,8 +1632,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     doc.add(newStringField("t", "1", Field.Store.NO));
     w.addDocument(doc);
 
-    IndexReader r =
-        UninvertingReader.wrap(DirectoryReader.open(w), Collections.singletonMap("f", Type.SORTED));
+    IndexReader r = UninvertingReader.wrap(DirectoryReader.open(w), Map.of("f", Type.SORTED));
     w.close();
     IndexSearcher s = newSearcher(r);
     TopDocs hits =
@@ -1664,7 +1640,7 @@ public class TestFieldCacheSort extends SolrTestCase {
             new TermQuery(new Term("t", "1")),
             10,
             new Sort(new SortField("f", SortField.Type.STRING)));
-    assertEquals(2, hits.totalHits.value);
+    assertEquals(2, hits.totalHits.value());
     // null sorts first
     assertEquals(1, hits.scoreDocs[0].doc);
     assertEquals(0, hits.scoreDocs[1].doc);
@@ -1691,8 +1667,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     writer.close();
     Sort sort = new Sort(new SortField("string", SortField.Type.STRING), SortField.FIELD_DOC);
     IndexReader reader =
-        UninvertingReader.wrap(
-            DirectoryReader.open(indexStore), Collections.singletonMap("string", Type.SORTED));
+        UninvertingReader.wrap(DirectoryReader.open(indexStore), Map.of("string", Type.SORTED));
     IndexSearcher searcher = new IndexSearcher(reader);
     expectThrows(
         IllegalStateException.class,
@@ -1725,8 +1700,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     }
 
     IndexReader r =
-        UninvertingReader.wrap(
-            DirectoryReader.open(w), Collections.singletonMap("id", Type.LEGACY_INTEGER));
+        UninvertingReader.wrap(DirectoryReader.open(w), Map.of("id", Type.LEGACY_INTEGER));
     w.close();
     Query q = new TermQuery(new Term("body", "text"));
     TestUtil.checkReader(r);
@@ -1741,31 +1715,31 @@ public class TestFieldCacheSort extends SolrTestCase {
 
     Sort sort = new Sort();
     TopDocs td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(new SortField("int", SortField.Type.INT), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort = new Sort(new SortField("string", SortField.Type.STRING, true), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort =
         new Sort(new SortField("string_val", SortField.Type.STRING_VAL, true), SortField.FIELD_DOC);
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
 
     sort =
         new Sort(
             new SortField("float", SortField.Type.FLOAT),
             new SortField("string", SortField.Type.STRING));
     td = empty.search(query, 10, sort, true);
-    assertEquals(0, td.totalHits.value);
+    assertEquals(0, td.totalHits.value());
   }
 
   /** Tests sorting a single document */
@@ -1775,16 +1749,15 @@ public class TestFieldCacheSort extends SolrTestCase {
     Document doc = new Document();
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", Type.SORTED));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.SORTED));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.STRING));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(1, td.totalHits.value);
-    assertEquals("foo", searcher.doc(td.scoreDocs[0].doc).get("value"));
+    assertEquals(1, td.totalHits.value());
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1797,18 +1770,17 @@ public class TestFieldCacheSort extends SolrTestCase {
     Document doc = new Document();
     doc.add(newStringField("value", "foo", Field.Store.YES));
     writer.addDocument(doc);
-    IndexReader ir =
-        UninvertingReader.wrap(writer.getReader(), Collections.singletonMap("value", Type.SORTED));
+    IndexReader ir = UninvertingReader.wrap(writer.getReader(), Map.of("value", Type.SORTED));
     writer.close();
 
     IndexSearcher searcher = newSearcher(ir);
     Sort sort = new Sort(new SortField("value", SortField.Type.STRING));
 
     TopDocs expected = searcher.search(new TermQuery(new Term("value", "foo")), 10);
-    assertEquals(1, expected.totalHits.value);
+    assertEquals(1, expected.totalHits.value());
     TopDocs actual = searcher.search(new TermQuery(new Term("value", "foo")), 10, sort, true);
 
-    assertEquals(expected.totalHits.value, actual.totalHits.value);
+    assertEquals(expected.totalHits.value(), actual.totalHits.value());
     assertEquals(expected.scoreDocs[0].score, actual.scoreDocs[0].score, 0F);
     TestUtil.checkReader(ir);
     ir.close();
@@ -1842,10 +1814,10 @@ public class TestFieldCacheSort extends SolrTestCase {
             new SortField("value", SortField.Type.STRING));
 
     TopDocs td = searcher.search(new MatchAllDocsQuery(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     // 'bar' comes before 'foo'
-    assertEquals("bar", searcher.doc(td.scoreDocs[0].doc).get("value"));
-    assertEquals("foo", searcher.doc(td.scoreDocs[1].doc).get("value"));
+    assertEquals("bar", searcher.storedFields().document(td.scoreDocs[0].doc).get("value"));
+    assertEquals("foo", searcher.storedFields().document(td.scoreDocs[1].doc).get("value"));
     TestUtil.checkReader(ir);
     ir.close();
     dir.close();
@@ -1870,7 +1842,7 @@ public class TestFieldCacheSort extends SolrTestCase {
     bq.add(new TermQuery(new Term("value", "foo")), Occur.SHOULD);
     bq.add(new MatchAllDocsQuery(), Occur.SHOULD);
     TopDocs td = searcher.search(bq.build(), 10, sort);
-    assertEquals(2, td.totalHits.value);
+    assertEquals(2, td.totalHits.value());
     if (Float.isNaN(td.scoreDocs[0].score) == false
         && Float.isNaN(td.scoreDocs[1].score) == false) {
       assertEquals(1, td.scoreDocs[0].doc);
