@@ -18,13 +18,11 @@ package org.apache.solr.common.cloud;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import org.apache.solr.cluster.api.HashRange;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.DocCollection.CollectionStateProps;
@@ -89,7 +87,7 @@ public abstract class DocRouter {
   // Hash ranges can't currently "wrap" - i.e. max must be greater or equal to min.
   // TODO: ranges may not be all contiguous in the future (either that or we will
   // need an extra class to model a collection of ranges)
-  public static class Range implements JSONWriter.Writable, Comparable<Range>, HashRange {
+  public static class Range implements JSONWriter.Writable, Comparable<Range> {
     public int min; // inclusive
     public int max; // inclusive
 
@@ -99,17 +97,14 @@ public abstract class DocRouter {
       this.max = max;
     }
 
-    @Override
     public int min() {
       return min;
     }
 
-    @Override
     public int max() {
       return max;
     }
 
-    @Override
     public boolean includes(int hash) {
       return hash >= min && hash <= max;
     }
@@ -136,8 +131,7 @@ public abstract class DocRouter {
 
     @Override
     public boolean equals(Object obj) {
-      if (!(obj instanceof Range)) return false;
-      Range other = (Range) obj;
+      if (!(obj instanceof Range other)) return false;
       return this.min == other.min && this.max == other.max;
     }
 
@@ -196,7 +190,7 @@ public abstract class DocRouter {
     } else if (fuzz < 0.0f) {
       fuzz = 0.0f;
     }
-    if (partitions == 0) return Collections.emptyList();
+    if (partitions == 0) return List.of();
     long rangeSize = (long) max - (long) min;
     long rangeStep = Math.max(1, rangeSize / partitions);
     long fuzzStep = Math.round(rangeStep * (double) fuzz / 2.0);
