@@ -18,12 +18,9 @@
 package org.apache.solr.common.cloud;
 
 import static org.apache.solr.common.params.CommonParams.NAME;
-import static org.apache.solr.common.params.CommonParams.VERSION;
 
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -31,35 +28,30 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
-import org.apache.solr.cluster.api.SimpleMap;
 import org.apache.solr.common.IteratorWriter;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.cloud.Replica.ReplicaStateProps;
 import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.StrUtils;
-import org.apache.solr.common.util.WrappedSimpleMap;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * This represents the individual replica states in a collection This is an immutable object. When
  * states are modified, a new instance is constructed
  */
 public class PerReplicaStates implements ReflectMapWriter {
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   public static final char SEPARATOR = ':';
   // no:of times to retry in case of a CAS failure
   public static final int MAX_RETRIES = 5;
 
-  // znode path where thisis loaded from
+  // znode path where this is loaded from
   @JsonProperty public final String path;
 
   // the child version of that znode
   @JsonProperty public final int cversion;
 
   // states of individual replicas
-  @JsonProperty public final SimpleMap<State> states;
+  @JsonProperty public final Map<String, State> states;
 
   private volatile Boolean allActive;
 
@@ -85,7 +77,7 @@ public class PerReplicaStates implements ReflectMapWriter {
         tmp.put(rs.replica, rs.insert(existing));
       }
     }
-    this.states = new WrappedSimpleMap<>(tmp);
+    this.states = tmp;
   }
 
   public static PerReplicaStates empty(String collectionName) {
@@ -95,27 +87,23 @@ public class PerReplicaStates implements ReflectMapWriter {
   /** Check and return if all replicas are ACTIVE */
   public boolean allActive() {
     if (this.allActive != null) return allActive;
-    boolean[] result = new boolean[] {true};
-    states.forEachEntry(
-        (r, s) -> {
-          if (s.state != Replica.State.ACTIVE) result[0] = false;
-        });
-    return this.allActive = result[0];
+    this.allActive = states.values().stream().allMatch(s -> s.state == Replica.State.ACTIVE);
+    return allActive;
   }
 
   /** Get the changed replicas */
   public static Set<String> findModifiedReplicas(PerReplicaStates old, PerReplicaStates fresh) {
     Set<String> result = new HashSet<>();
     if (fresh == null) {
-      old.states.forEachKey(result::add);
+      result.addAll(old.states.keySet());
       return result;
     }
-    old.states.forEachEntry(
+    old.states.forEach(
         (s, state) -> {
           // the state is modified or missing
           if (!Objects.equals(fresh.get(s), state)) result.add(s);
         });
-    fresh.states.forEachEntry(
+    fresh.states.forEach(
         (s, state) -> {
           if (old.get(s) == null) result.add(s);
         });
@@ -165,8 +153,8 @@ public class PerReplicaStates implements ReflectMapWriter {
   }
 
   private StringBuilder appendStates(StringBuilder sb) {
-    states.forEachEntry(
-        new BiConsumer<String, State>() {
+    states.forEach(
+        new BiConsumer<>() {
           int count = 0;
 
           @Override
@@ -237,7 +225,7 @@ public class PerReplicaStates implements ReflectMapWriter {
     @Override
     public void writeMap(EntryWriter ew) throws IOException {
       ew.put(NAME, replica);
-      ew.put(VERSION, version);
+      ew.put("version", version);
       ew.put(ReplicaStateProps.STATE, state.toString());
       if (isLeader) ew.put(ReplicaStateProps.LEADER, isLeader);
       ew.putIfNotNull("duplicate", duplicate);
@@ -263,7 +251,7 @@ public class PerReplicaStates implements ReflectMapWriter {
 
     /** fetch duplicates entries for this replica */
     List<State> getDuplicates() {
-      if (duplicate == null) return Collections.emptyList();
+      if (duplicate == null) return List.of();
       List<State> result = new ArrayList<>();
       State current = duplicate;
       while (current != null) {
@@ -291,8 +279,7 @@ public class PerReplicaStates implements ReflectMapWriter {
 
     @Override
     public boolean equals(Object o) {
-      if (o instanceof State) {
-        State that = (State) o;
+      if (o instanceof State that) {
         return Objects.equals(this.asString, that.asString);
       }
       return false;
@@ -318,7 +305,7 @@ public class PerReplicaStates implements ReflectMapWriter {
               ew.put(
                   "states",
                   (IteratorWriter)
-                      iw -> states.forEachEntry((s, state) -> iw.addNoEx(state.toString())));
+                      iw -> states.forEach((s, state) -> iw.addNoEx(state.toString())));
             } else {
               ew.put(k, v);
             }
