@@ -17,13 +17,12 @@
 package org.apache.solr.common.util;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.Collections.singletonList;
-import static java.util.concurrent.TimeUnit.NANOSECONDS;
 import static org.apache.solr.common.SolrException.ErrorCode.SERVER_ERROR;
 
 import com.fasterxml.jackson.annotation.JsonAnyGetter;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
+import java.io.EOFException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -63,7 +62,6 @@ import java.util.Random;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
-import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BiConsumer;
@@ -71,16 +69,9 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpRequestBase;
-import org.apache.http.util.EntityUtils;
 import org.apache.solr.common.IteratorWriter;
 import org.apache.solr.common.LinkedHashMapWriter;
 import org.apache.solr.common.MapWriter;
-import org.apache.solr.common.MapWriterMap;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SpecProvider;
 import org.apache.solr.common.annotation.JsonProperty;
@@ -89,12 +80,8 @@ import org.noggit.CharArr;
 import org.noggit.JSONParser;
 import org.noggit.JSONWriter;
 import org.noggit.ObjectBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class Utils {
-
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   public static final Random RANDOM;
 
@@ -165,8 +152,7 @@ public class Utils {
 
   @SuppressWarnings({"unchecked"})
   public static void forEachMapEntry(Object o, @SuppressWarnings({"rawtypes"}) BiConsumer fun) {
-    if (o instanceof MapWriter) {
-      MapWriter m = (MapWriter) o;
+    if (o instanceof MapWriter m) {
       try {
         m.writeMap(
             new MapWriter.EntryWriter() {
@@ -186,7 +172,7 @@ public class Utils {
 
   private static Object makeDeepCopy(Object v, int maxDepth, boolean mutable, boolean sorted) {
     if (v instanceof MapWriter && maxDepth > 1) {
-      v = ((MapWriter) v).toMap(new LinkedHashMap<>());
+      v = convertToMap((MapWriter) v, new LinkedHashMap<>());
     } else if (v instanceof IteratorWriter && maxDepth > 1) {
       List<Object> l = ((IteratorWriter) v).toList(new ArrayList<>());
       if (sorted) {
@@ -214,6 +200,12 @@ public class Utils {
   public static Object fromJavabin(byte[] bytes) throws IOException {
     try (JavaBinCodec jbc = new JavaBinCodec()) {
       return jbc.unmarshal(bytes);
+    }
+  }
+
+  public static Object fromJavabin(InputStream is) throws IOException {
+    try (JavaBinCodec jbc = new JavaBinCodec()) {
+      return jbc.unmarshal(is);
     }
   }
 
@@ -285,7 +277,7 @@ public class Utils {
     // Need below check in both fromJSON methods since
     // utf8.length returns a NPE without this check.
     if (utf8 == null || utf8.length == 0) {
-      return Collections.emptyMap();
+      return Map.of();
     }
     return fromJSON(utf8, 0, utf8.length);
   }
@@ -297,18 +289,12 @@ public class Utils {
   public static Object fromJSON(
       byte[] utf8, int offset, int length, Function<JSONParser, ObjectBuilder> fun) {
     if (utf8 == null || utf8.length == 0 || length == 0) {
-      return Collections.emptyMap();
+      return Map.of();
     }
-    // convert directly from bytes to chars
-    // and parse directly from that instead of going through
-    // intermediate strings or readers
-    CharArr chars = new CharArr();
-    ByteUtils.UTF8toUTF16(utf8, offset, length, chars);
-    JSONParser parser = new JSONParser(chars.getArray(), chars.getStart(), chars.length());
-    parser.setFlags(
-        parser.getFlags()
-            | JSONParser.ALLOW_MISSING_COLON_COMMA_BEFORE_OBJECT
-            | JSONParser.OPTIONAL_OUTER_BRACES);
+    // convert from bytes to chars on-the-fly and parse directly
+    // from that instead of going through intermediate buffers
+    Reader reader = new InputStreamReader(new ByteArrayInputStream(utf8, offset, length), UTF_8);
+    JSONParser parser = getJSONParser(reader);
     try {
       return fun.apply(parser).getValStrict();
     } catch (IOException e) {
@@ -377,20 +363,6 @@ public class Utils {
         }
       };
 
-  public static final Function<JSONParser, ObjectBuilder> MAPOBJBUILDER =
-      jsonParser -> {
-        try {
-          return new ObjectBuilder(jsonParser) {
-            @Override
-            public Object newObject() {
-              return new HashMap<>();
-            }
-          };
-        } catch (IOException e) {
-          throw new RuntimeException(e);
-        }
-      };
-
   /**
    * Util function to convert {@link Object} to {@link String} Specially handles {@link Date} to
    * string conversion
@@ -442,8 +414,11 @@ public class Utils {
     }
   }
 
+  @SuppressForbidden(
+      reason = "singletonList(null) is intentional — null is a sentinel path element")
   public static Object getObjectByPath(Object root, boolean onlyPrimitive, String hierarchy) {
-    if (hierarchy == null) return getObjectByPath(root, onlyPrimitive, singletonList(null));
+    if (hierarchy == null)
+      return getObjectByPath(root, onlyPrimitive, Collections.singletonList(null));
     List<String> parts = StrUtils.splitSmart(hierarchy, '/', true);
     return getObjectByPath(root, onlyPrimitive, parts);
   }
@@ -530,17 +505,12 @@ public class Utils {
         Object o = getVal(obj, s, -1);
         if (o == null) return null;
         if (idx > -1) {
-          if (o instanceof List) {
-            List<?> l = (List<?>) o;
+          if (o instanceof List<?> l) {
             o = idx < l.size() ? l.get(idx) : null;
           } else if (o instanceof IteratorWriter) {
             o = getValueAt((IteratorWriter) o, idx);
-          } else if (o instanceof MapWriter) {
+          } else if (o instanceof MapWriter || o instanceof Map<?, ?>) {
             o = getVal(o, null, idx);
-          } else if (o instanceof Map) {
-            @SuppressWarnings("unchecked")
-            Map<String, Object> map = (Map<String, Object>) o;
-            o = getVal(new MapWriterMap(map), null, idx);
           } else {
             return null;
           }
@@ -606,53 +576,41 @@ public class Utils {
     return o instanceof Map || o instanceof NamedList || o instanceof MapWriter;
   }
 
-  private static Object getVal(Object obj, String key, int idx) {
-    if (obj instanceof MapWriter) {
+  /** Extract either the key or index from mapLike. */
+  private static Object getVal(Object mapLike, String key, int idx) {
+    assert (key == null && idx >= 0) || (key != null && idx == -1);
+    if (mapLike instanceof Map<?, ?> m) {
+      if (key != null) {
+        return m.get(key);
+      } else {
+        var optEntry = m.entrySet().stream().skip(idx).findFirst();
+        return optEntry
+            .map(entry -> new MapWriterEntry<>(entry.getKey().toString(), entry.getValue()))
+            .orElse(null);
+      }
+    } else if (mapLike instanceof MapWriter mapWriter) {
       Object[] result = new Object[1];
       try {
-        ((MapWriter) obj)
-            .writeMap(
-                new MapWriter.EntryWriter() {
-                  int count = -1;
+        mapWriter.writeMap(
+            new MapWriter.EntryWriter() {
+              int count = -1;
 
-                  @Override
-                  public MapWriter.EntryWriter put(CharSequence k, Object v) {
-                    if (result[0] != null) return this;
-                    if (idx < 0) {
-                      if (key.contentEquals(k)) result[0] = v;
-                    } else {
-                      if (++count == idx) result[0] = new MapWriterEntry<>(k, v);
-                    }
-                    return this;
-                  }
-                });
+              @Override
+              public MapWriter.EntryWriter put(CharSequence k, Object v) {
+                if (result[0] != null) return this;
+                if (idx < 0) {
+                  if (key.contentEquals(k)) result[0] = v;
+                } else {
+                  if (++count == idx) result[0] = new MapWriterEntry<>(k, v);
+                }
+                return this;
+              }
+            });
       } catch (IOException e) {
         throw new RuntimeException(e);
       }
       return result[0];
-    } else if (obj instanceof Map) return ((Map<?, ?>) obj).get(key);
-    else throw new RuntimeException("must be a NamedList or Map");
-  }
-
-  /**
-   * If the passed entity has content, make sure it is fully read and closed.
-   *
-   * @param entity to consume or null
-   */
-  public static void consumeFully(HttpEntity entity) {
-    if (entity != null) {
-      try {
-        // make sure the stream is full read
-        readFully(entity.getContent());
-      } catch (UnsupportedOperationException e) {
-        // nothing to do then
-      } catch (IOException e) {
-        // quiet
-      } finally {
-        // close the stream
-        EntityUtils.consumeQuietly(entity);
-      }
-    }
+    } else throw new RuntimeException("must be a NamedList or Map");
   }
 
   /**
@@ -662,8 +620,13 @@ public class Utils {
    * @throws IOException on problem with IO
    */
   public static void readFully(InputStream is) throws IOException {
-    is.skip(is.available());
-    while (is.read() != -1) {}
+    if (is.read() != -1) { // not needed but avoids skipNBytes's internal buffer allocation
+      try {
+        is.skipNBytes(Long.MAX_VALUE); // throws EOF
+      } catch (EOFException e) {
+        // ignore / expected for skipNBytes
+      }
+    }
   }
 
   public static final Pattern ARRAY_ELEMENT_INDEX = Pattern.compile("(\\S*?)\\[([-]?\\d+)\\]");
@@ -734,75 +697,8 @@ public class Utils {
     return isModified;
   }
 
-  /**
-   * Given a URL string with or without a scheme, return a new URL with the correct scheme applied.
-   *
-   * @param url A URL to change the scheme (http|https)
-   * @return A new URL with the correct scheme
-   */
-  public static String applyUrlScheme(final String url, final String urlScheme) {
-    Objects.requireNonNull(url, "URL must not be null!");
-    // heal an incorrect scheme if needed, otherwise return null indicating no change
-    final int at = url.indexOf("://");
-    return (at == -1) ? (urlScheme + "://" + url) : urlScheme + url.substring(at);
-  }
-
-  /**
-   * Construct a V1 base url for the Solr node, given its name (e.g., 'app-node-1:8983_solr') and a
-   * URL scheme.
-   *
-   * @param nodeName name of the Solr node
-   * @param urlScheme scheme for the base url ('http' or 'https')
-   * @return url that looks like {@code https://app-node-1:8983/solr}
-   * @throws IllegalArgumentException if the provided node name is malformed
-   */
-  public static String getBaseUrlForNodeName(final String nodeName, final String urlScheme) {
-    return getBaseUrlForNodeName(nodeName, urlScheme, false);
-  }
-
-  /**
-   * Construct a V1 or a V2 base url for the Solr node, given its name (e.g.,
-   * 'app-node-1:8983_solr') and a URL scheme.
-   *
-   * @param nodeName name of the Solr node
-   * @param urlScheme scheme for the base url ('http' or 'https')
-   * @param isV2 whether a V2 url should be constructed
-   * @return url that looks like {@code https://app-node-1:8983/api} (V2) or {@code
-   *     https://app-node-1:8983/solr} (V1)
-   * @throws IllegalArgumentException if the provided node name is malformed
-   */
-  public static String getBaseUrlForNodeName(
-      final String nodeName, final String urlScheme, boolean isV2) {
-    final int colonAt = nodeName.indexOf(':');
-    if (colonAt == -1) {
-      throw new IllegalArgumentException(
-          "nodeName does not contain expected ':' separator: " + nodeName);
-    }
-
-    final int _offset = nodeName.indexOf('_', colonAt);
-    if (_offset < 0) {
-      throw new IllegalArgumentException(
-          "nodeName does not contain expected '_' separator: " + nodeName);
-    }
-    final String hostAndPort = nodeName.substring(0, _offset);
-    return urlScheme + "://" + hostAndPort + "/" + (isV2 ? "api" : "solr");
-  }
-
   public static long time(TimeSource timeSource, TimeUnit unit) {
     return unit.convert(timeSource.getTimeNs(), TimeUnit.NANOSECONDS);
-  }
-
-  public static long timeElapsed(TimeSource timeSource, long start, TimeUnit unit) {
-    return unit.convert(timeSource.getTimeNs() - NANOSECONDS.convert(start, unit), NANOSECONDS);
-  }
-
-  public static <T> T handleExp(Logger logger, T def, Callable<T> c) {
-    try {
-      return c.call();
-    } catch (Exception e) {
-      logger.error(e.getMessage(), e);
-    }
-    return def;
   }
 
   public interface InputStreamConsumer<T> {
@@ -830,49 +726,6 @@ public class Utils {
         throw new RuntimeException(e);
       }
     };
-  }
-
-  public static <T> T executeGET(HttpClient client, String url, InputStreamConsumer<T> consumer)
-      throws SolrException {
-    return executeHttpMethod(client, url, consumer, new HttpGet(url));
-  }
-
-  public static <T> T executeHttpMethod(
-      HttpClient client, String url, InputStreamConsumer<T> consumer, HttpRequestBase httpMethod) {
-    T result = null;
-    HttpResponse rsp = null;
-    try {
-      rsp = client.execute(httpMethod);
-    } catch (IOException e) {
-      log.error("Error in request to url : {}", url, e);
-      throw new SolrException(SolrException.ErrorCode.UNKNOWN, "Error sending request");
-    }
-    int statusCode = rsp.getStatusLine().getStatusCode();
-    if (statusCode != 200) {
-      try {
-        log.error(
-            "Failed a request to: {}, status: {}, body: {}",
-            url,
-            rsp.getStatusLine(),
-            EntityUtils.toString(rsp.getEntity(), StandardCharsets.UTF_8)); // nowarn
-      } catch (IOException e) {
-        log.error("could not print error", e);
-      }
-      throw new SolrException(SolrException.ErrorCode.getErrorCode(statusCode), "Unknown error");
-    }
-    HttpEntity entity = rsp.getEntity();
-    try {
-      InputStream is = entity.getContent();
-      if (consumer != null) {
-
-        result = consumer.accept(is);
-      }
-    } catch (IOException e) {
-      throw new SolrException(SolrException.ErrorCode.UNKNOWN, e);
-    } finally {
-      Utils.consumeFully(entity);
-    }
-    return result;
   }
 
   /**
@@ -909,6 +762,12 @@ public class Utils {
    * @return a serializable version of the object
    */
   public static Object getReflectWriter(Object o) {
+    // Enums serialized as their declared name so that javabin/NamedList consumers
+    // (e.g. HealthCheckHandlerTest comparing against CommonParams.OK == "OK") see
+    // a plain string rather than "pkg.EnumClass:NAME".
+    if (o instanceof Enum<?> e) {
+      return e.name();
+    }
     List<FieldWriter> fieldWriters = null;
     try {
       fieldWriters =
@@ -970,6 +829,8 @@ public class Utils {
       Class<? extends Annotation> catchAllAnnotation,
       Function<Field, String> fieldNamer)
       throws IllegalAccessException {
+    // ClassLoader identity (not equals) determines whether it is safe to cache reflective metadata.
+    @SuppressWarnings("ReferenceEquality")
     boolean sameClassLoader = c.getClassLoader() == Utils.class.getClassLoader();
     // we should not cache the class references of objects loaded from packages because they will
     // not get garbage collected
@@ -1091,7 +952,7 @@ public class Utils {
    * <p>The provided object is not required to be a {@link MapWriter}.
    */
   public static Map<String, Object> reflectToMap(Object toReflect) {
-    return ((Utils.DelegateReflectWriter) Utils.getReflectWriter(toReflect)).toMap(new HashMap<>());
+    return convertToMap((MapWriter) Utils.getReflectWriter(toReflect), new HashMap<>());
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -1105,12 +966,13 @@ public class Utils {
             }
 
             private MapWriter.EntryWriter writeEntry(CharSequence k, Object v) {
-              if (v instanceof MapWriter) v = ((MapWriter) v).toMap(new LinkedHashMap<>());
+              if (v instanceof MapWriter) v = convertToMap((MapWriter) v, new LinkedHashMap<>());
               if (v instanceof IteratorWriter) v = ((IteratorWriter) v).toList(new ArrayList<>());
               if (v instanceof Iterable) {
                 List lst = new ArrayList();
                 for (Object vv : (Iterable) v) {
-                  if (vv instanceof MapWriter) vv = ((MapWriter) vv).toMap(new LinkedHashMap<>());
+                  if (vv instanceof MapWriter)
+                    vv = convertToMap((MapWriter) vv, new LinkedHashMap<>());
                   if (vv instanceof IteratorWriter)
                     vv = ((IteratorWriter) vv).toList(new ArrayList<>());
                   lst.add(vv);
@@ -1121,7 +983,8 @@ public class Utils {
                 Map map = new LinkedHashMap();
                 for (Map.Entry<?, ?> entry : ((Map<?, ?>) v).entrySet()) {
                   Object vv = entry.getValue();
-                  if (vv instanceof MapWriter) vv = ((MapWriter) vv).toMap(new LinkedHashMap<>());
+                  if (vv instanceof MapWriter)
+                    vv = convertToMap((MapWriter) vv, new LinkedHashMap<>());
                   if (vv instanceof IteratorWriter)
                     vv = ((IteratorWriter) vv).toList(new ArrayList<>());
                   map.put(entry.getKey(), vv);
