@@ -18,7 +18,6 @@
 package org.apache.solr.client.solrj.impl;
 
 import java.net.URL;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
@@ -40,7 +39,6 @@ public class HttpClusterStateSSLTest extends SolrCloudTestCase {
         .addConfig(
             "conf",
             getFile("solrj")
-                .toPath()
                 .resolve("solr")
                 .resolve("configsets")
                 .resolve("streaming")
@@ -65,9 +63,7 @@ public class HttpClusterStateSSLTest extends SolrCloudTestCase {
 
     // verify the base_url is actually stored with https in it on the server-side
     byte[] stateJsonBytes =
-        cluster
-            .getZkClient()
-            .getData(DocCollection.getCollectionPath(collectionId), null, null, true);
+        cluster.getZkClient().getData(DocCollection.getCollectionPath(collectionId), null, null);
     assertNotNull(stateJsonBytes);
     Map<String, Object> replicasMap =
         (Map<String, Object>)
@@ -84,18 +80,17 @@ public class HttpClusterStateSSLTest extends SolrCloudTestCase {
 
     // verify the http derived cluster state (on the client side) agrees with what the server stored
     try (CloudSolrClient httpBasedCloudSolrClient =
-        new CloudSolrClient.Builder(Collections.singletonList(url0.toExternalForm())).build()) {
+        new CloudSolrClient.Builder(List.of(url0.toExternalForm())).build()) {
       ClusterStateProvider csp = httpBasedCloudSolrClient.getClusterStateProvider();
-      assertTrue(csp instanceof Http2ClusterStateProvider);
+      assertTrue(csp instanceof HttpClusterStateProvider);
       verifyUrlSchemeInClusterState(csp.getCollection(collectionId), expectedReplicas);
     }
 
     // http2
     try (CloudSolrClient http2BasedClient =
-        new CloudHttp2SolrClient.Builder(Collections.singletonList(url0.toExternalForm()))
-            .build()) {
+        new CloudSolrClient.Builder(List.of(url0.toExternalForm())).build()) {
       ClusterStateProvider csp = http2BasedClient.getClusterStateProvider();
-      assertTrue(csp instanceof Http2ClusterStateProvider);
+      assertTrue(csp instanceof HttpClusterStateProvider);
       verifyUrlSchemeInClusterState(csp.getCollection(collectionId), expectedReplicas);
     }
 
@@ -108,7 +103,7 @@ public class HttpClusterStateSSLTest extends SolrCloudTestCase {
   private void verifyUrlSchemeInClusterState(
       final DocCollection collection, final int expectedReplicas) {
     assertNotNull(collection);
-    List<Replica> replicas = collection.getReplicas();
+    List<Replica> replicas = collection.replicaStream().toList();
     assertNotNull(replicas);
     assertEquals(expectedReplicas, replicas.size());
     for (Replica r : replicas) {
