@@ -18,7 +18,6 @@ package org.apache.solr.handler.component;
 
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
@@ -27,7 +26,6 @@ import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
-import org.apache.solr.common.cloud.ZkCoreNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.StrUtils;
@@ -158,7 +156,6 @@ public class TrackingShardHandlerFactory extends HttpShardHandlerFactory {
         ShardHandlerFactory factory = container.getShardHandlerFactory();
         assert factory instanceof TrackingShardHandlerFactory
             : "not a TrackingShardHandlerFactory: " + factory.getClass();
-        @SuppressWarnings("resource")
         TrackingShardHandlerFactory trackingShardHandlerFactory =
             (TrackingShardHandlerFactory) factory;
         trackingShardHandlerFactory.setTrackingQueue(queue);
@@ -273,13 +270,13 @@ public class TrackingShardHandlerFactory extends HttpShardHandlerFactory {
         // multiple shard addresses may be present separated by '|'
         List<String> list = StrUtils.splitSmart(entry.getKey(), '|');
         for (Map.Entry<String, Replica> replica : slice.getReplicasMap().entrySet()) {
-          String coreUrl = new ZkCoreNodeProps(replica.getValue()).getCoreUrl();
+          String coreUrl = replica.getValue().getCoreUrl();
           if (list.contains(coreUrl)) {
             return new ArrayList<>(entry.getValue());
           }
         }
       }
-      return Collections.emptyList();
+      return List.of();
     }
 
     /**
